--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -1,11 +1,10 @@
 ---
-title: "Understanding Collapsibility of Effect Measures: Marginal vs Stratified"
-description: "いわゆる調整解析とSimpsonのパラドックスの関係は？がん臨床試験で用いられる層別Cox回帰にもつながるエピソード。"
+title: "When Odds Ratios Approximate Risk Ratios—and When They Fail"
+description: "「オッズ比よりオッズ比の平方根の方がよい一面もあるんだ」父は疫学の常識を揺さぶります。"
 tags:
   - Bias
-  - Confounding & collapsibility
   - Effect measure
-  - R simulation
+  - Observational study
 format:
   html:
     toc: true
@@ -15,249 +14,154 @@ format:
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Effects and time III − Understanding Collapsibility of Effect Measures: Marginal vs Stratified
+# Effects and Time III − When Odds Ratios Approximate Risk Ratios—and When They Fail
 
 ::: {.serif-block .text-right}
-Keywords: clinical trial, confounding & collapsibility, effect measure, R simulation
+Keywords: bias, effect measure, observational study
 :::
 
 ------------------------------------------------------------------------
 
-### 効果の指標
+### リスク比とオッズ比って、結局同じ？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さん、なにか甘いものない？お腹すいちゃって」
+私「お父さんの話を聞いててね、国試の勉強してたときのことを思い出したよ。保健統計だったか、疫学だったかの問題で、オッズ比の計算問題を解いたことがあったなあ。リスク比とオッズ比って結局同じ使い方をするの？みたいな」
 :::
 
 ::: voice-father
-お父さん「大福だったら買い置きがあるよ。コーヒーとお茶、どっちにする？」
+お父さん「ああ、この前、膵がんの数値例で計算したとき、リスク比とオッズ比はどちらも3倍だったね。でも、これはたまたま。もっと正確にいうと、膵がんのように、**リスクの値が低いときはリスク比とオッズ比は近い値**になるんだ。ほら、リスク比とオッズ比の数式を見比べてよ。リスク比とオッズ比の違いって、式の分母に$1-\pi_1$と$1-\pi_2$があるかどうかでしょ。リスクが低いと、ここがほとんど1になるから、リスク比とオッズ比の差がなくなる」
 :::
 
 ::: voice-daughter
-私「コーヒー。ミルクも入れて。お茶もいいけど、統計の話を聞きたいときはコーヒーの気分なんだ。このあいだも、疫学で使う統計の話をしてくれたでしょ。でも、医学部で講義を受けたのが昔すぎてさ。疫学ってなにか忘れちゃったな」
+私「まあ、私も論文読むとき別に区別してないけど」
 :::
 
 ::: voice-father
-お父さん「疫学か。疫学は、集団における病気について調べる分野だよね。病気の原因を調べたり、予防方法や公衆衛生対策を立てたりする。がん、循環器、感染症など扱う病気によってだいぶ違うよね。まあ、疫学の基本はなにかっていったら、コホート研究とリスクかな」
+お父さん「えーっと、状況によってはそれはよくない。疾患や対象集団によっては、リスクが低いときばかりじゃないからね。最近の論文だと、オッズ比をリスク比の代わりに使うなら、そのままの値じゃなくて、**オッズ比の平方根**を報告した方がいいっていう説もある（VanderWeele 2017）」
 :::
 
 ::: voice-daughter
-私「そうだったね、この前のワクチン有効率のやつは、リスクもワクチン有効率もパーセンテージ表記だからまぎらわしいって話だった。効果の指標（effect measure）もいろいろあったな。リスク比、オッズ比、ハザード比だっけ？」
+私「なにそれ、またお作法が増えたの？」
+:::
+
+::: voice-father
+お父さん「お作法があるわけじゃないんだけど、オッズ比をリスク比の近似として使うことがあるからね。そういうときに限っては、オッズ比の代わりにオッズ比の平方根でもいいんじゃないっていう主張かな。どっちにしても近似バイアスはそれなりに残るんだけど。リスク比とオッズ比の使い分けの話をするときは、まずは具体的な計算結果をみた方がわかりやすいと思う」
 :::
 ::::::::::::::::::::::::::::::::: 
 
-### リスク比とオッズ比、どっちを使う？
+::: {.callout-note appearance="simple" title="リスク比はオッズ比の近似か"}
 
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「じゃあ、リスク比とオッズ比の話をしようか。コーヒー飲みながら気楽に聞いてね。統計学が気にするのは、**それぞれの指標の意味・解釈**の違いもあるけど、それ以上に**数学的な性質**を考えているんだよね。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じっていったらいいかな」
+表1は、2群の疾患リスク$\pi_1$と$\pi_2$の数値を0.1から0.9まで動かして、リスク比、オッズ比、オッズ比の平方根（square root of OR）を計算したものです。
+
+$RR=\frac{\pi_1}{\pi_2}$
+
+$OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
+
+$SOR=\sqrt{\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}}$
+
+$\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ比はまったく違う値になることがわかります。リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなります。また、$\pi_1$と$\pi_2$が0.2～0.7の範囲であれば、リスク比とオッズ比の平方根は、高々0.11しか違いません。
 :::
 
-::: voice-daughter
-私「ふーんそうなんだ」
-:::
-
-::: voice-father
-お父さん「後は、ケース・コントロール研究のような、コホートの一部の情報しかない状況でも計算できるし、ロジスティック回帰のようなモデリングするとき利用しやすいのがいいところかな。悪い面はね、層別解析をしたとき、ちょっと不自然な計算結果になる」
-:::
-
-::: voice-daughter
-私「ケース・コントロール研究って、データベースとかを使って後ろ向きに調査するやつね。これも疫学。そうねえ、不自然な数字になるのは困るんじゃない？層別なんてしたこと私はないけど」
-:::
-
-::: voice-father
-お父さん「そうだね、次の2つの表は層別する前とする後の結果なんだけど、比べてみてよ」
-:::
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note appearance="simple" title="層別した指標の併合可能性"}
-表1と表2は、がん患者100人のランダム化臨床試験を想定して作った数値例です。表1では100人全体における死亡リスクを、表2はステージIIIの50人とステージIVの50人に層別した死亡リスクを示しています。
-
-まず、抗がん剤投与群の死亡リスクをみてください。ステージIIIでは死亡リスクは20%と低く、ステージIVでは40%と高いことがわかります。そして全体の死亡リスクは、ステージIIIとステージIVの平均（30%）です。このように、リスクには、層別する前の値が、層別した後の平均になるという性質があります。
-
-これを踏まえて、リスク比、リスク差、オッズ比の性質を考えてみましょう。表1と表2を比べると、リスク比はすべて0.50倍です。このように、層別する前後でリスク比が変化しないことは、治療効果を測るために好ましい性質です。なぜなら、ステージIIIでリスクが半分になり、ステージIVでも半分になるなら、2つの層を合計してもリスクが半分になってほしいからです。リスク差は、2つのリスクの差をとったものです。したがって、リスクと同じように層別する前の値が、層別した後の平均になります。層ごとのリスク差が等しければ（この数値例ではそうなっていませんが）、層別前のリスク差も、層別後のリスク差と同じ値になるはずです。リスク差とリスク比の持つこの性質を、**併合可能性（collapsibility）**と呼んでいます。
-
-一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。
-:::
 
 ::: panel-tabset
-### ステージによる層別前
+### 疾患リスク0.1～0.4
 
-表1. 仮想的ながんランダム化臨床試験におけるリスク差・リスク比・オッズ比
+表1. 2群の疾患リスクを0.1から0.9まで動かしたときのリスク比（RR）、オッズ比（OR）、オッズ比の平方根（SOR）
 
-|               | 緩和療法群 | 抗がん剤投与群 | 効果の指標 |
-|---------------|------------|----------------|------------|
-| 合計（100人） |            |                |            |
-| 　死亡        | 30         | 15             |            |
-| 　生存        | 20         | 35             |            |
-| 　死亡リスク  | 60%        | 30%            |            |
-| 　リスク差    |            |                | -30%       |
-| 　リスク比    |            |                | 0.50倍     |
-| 　オッズ比    |            |                | 0.29倍     |
+|     | 0.1 | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
+|-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|
+| 0.1 |RR=1 | 0.50| 0.33| 0.25| 0.20| 0.17| 0.14| 0.13| 0.11|
+|     |OR=1 | 0.44| 0.25| 0.17| 0.11| 0.07| 0.05| 0.03| 0.01|
+|     |SOR=1| 0.67| 0.51| 0.41| 0.33| 0.27| 0.22| 0.17| 0.11|
+| 0.2 |     |RR=1 | 0.67| 0.50| 0.40| 0.33| 0.29| 0.25| 0.22|
+|     |     |OR=1 | 0.58| 0.38| 0.25| 0.17| 0.11| 0.06| 0.03|
+|     |     |SOR=1| 0.76| 0.61| 0.50| 0.41| 0.33| 0.25| 0.17|
+| 0.3 |     |     |RR=1 | 0.75| 0.60| 0.50| 0.43| 0.38| 0.33|
+|     |     |     |OR=1 | 0.64| 0.43| 0.29| 0.18| 0.11| 0.05|
+|     |     |     |SOR=1| 0.80| 0.65| 0.53| 0.43| 0.33| 0.22|
+| 0.4 |     |     |     |RR=1 | 0.80| 0.67| 0.57| 0.50| 0.44|
+|     |     |     |     |OR=1 | 0.67| 0.44| 0.29| 0.17| 0.07|
+|     |     |     |     |SOR=1| 0.82| 0.67| 0.53| 0.41| 0.27|
 
-### ステージによる層別後
+### 疾患リスク0.5～0.8
 
-表2. 層別後の死亡リスクとリスク差・リスク比・オッズ比
+表1. 2群の疾患リスクを0.1から0.9まで動かしたときのリスク比（RR）、オッズ比（OR）、オッズ比の平方根（SOR）
 
-|                     | 緩和療法群 | 抗がん剤投与群 | 効果の指標 |
-|---------------------|------------|----------------|------------|
-| ステージIII（50人） |            |                |            |
-| 　死亡              | 10         | 5              |            |
-| 　生存              | 15         | 20             |            |
-| 　死亡リスク        | 40%        | 20%            |            |
-| 　リスク差          |            |                | -20%       |
-| 　リスク比          |            |                | 0.50倍     |
-| 　オッズ比          |            |                | 0.38倍     |
-| ステージIV（50人）  |            |                |            |
-| 　死亡              | 20         | 10             |            |
-| 　生存              | 5          | 15             |            |
-| 　死亡リスク        | 80%        | 40%            |            |
-| 　リスク差          |            |                | -40%       |
-| 　リスク比          |            |                | 0.50倍     |
-| 　オッズ比          |            |                | 0.17倍     |
+|     | 0.1 | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 |
+|-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|
+| 0.5 |     |     |     |     |RR=1 | 0.83| 0.71| 0.63| 0.56|
+|     |     |     |     |     |OR=1 | 0.67| 0.43| 0.25| 0.11|
+|     |     |     |     |     |SOR=1| 0.82| 0.65| 0.50| 0.33|
+| 0.6 |     |     |     |     |     |RR=1 | 0.86| 0.75| 0.67|
+|     |     |     |     |     |     |OR=1 | 0.64| 0.38| 0.17|
+|     |     |     |     |     |     |SOR=1| 0.80| 0.61| 0.41|
+| 0.7 |     |     |     |     |     |     |RR=1 | 0.88| 0.78|
+|     |     |     |     |     |     |     |OR=1 | 0.58| 0.26|
+|     |     |     |     |     |     |     |SOR=1| 0.76| 0.51|
+| 0.8 |     |     |     |     |     |     |     |RR=1 | 0.89|
+|     |     |     |     |     |     |     |     |OR=1 | 0.44|
+|     |     |     |     |     |     |     |     |SOR=1| 0.67|
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「なるほどね、リスク比を計算すると同じ0.5なのに、オッズ比の値はばらばらなんだ。オッズ比は層別すると同じ効果としては扱いにくいから注意しなさいってことね」
+私「この表、いっぱい数字があって見方がわからないな。対角のところがRR=OR=SOR=1になるのは、$\pi_1$と$\pi_2$が同じ値だからだよね」
 :::
 
 ::: voice-father
-お父さん「そうだね、研究者としては、ステージ別でも層別しなくても、リスクが半分になる治療なら、半分ってことが読み取れる値になってほしいよね。そういう感覚でしょ」
+お父さん「ごめんごめん、説明が必要だよね。RRに近いのは、ORとSORのどっちかをみてほしいんだ。さっき話した通り、古い教科書ではオッズ比はリスク比の近似だって教えるけど、実際にいろんな組み合わせで計算すると、そうならないことがある。っていうか、表をみるとRRとOR、結構ずれてない？むしろオッズ比の平方根をとった方がいいんじゃないかって話」
 :::
 
 ::: voice-daughter
-私「うん」
+私「平方根なんて論文書くとき勝手に計算していいのかね」
 :::
 
 ::: voice-father
-お父さん「そこまではいいんだ。でも誤解してほしくないのは、リスク比は併合可能で、オッズ比は併合可能ではない、だからオッズ比が悪いっていいたいわけじゃないよ。結果の読み取り方と相性があるってこと。オッズ比はオッズ比で、ロジスティック回帰と対応しているっていうのは別のメリットがある」
+お父さん「リスク比を推定することが目的なら、オッズ比の平方根を論文で示してもいいかもって気はする。推定方法の一種として、論文のMethodsで説明していればね。でも、よっぽど特殊な状況じゃなければ、リスク比を計算するのが素直だと思うけど」
 :::
 
 ::: voice-daughter
-私「ふーん。お父さんって数学的性質を整理するときめっちゃ早口」
-:::
-:::::::::::::::::::::::::::::::::
-
-### リスク差、リスク比、オッズ比、どれを使う？
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「ごめん、そもそも論なんだけど。どうせ割合同士を比べるんだから、わざわざ比をとらなくてもいいんじゃない？パーセントの差でよくない？+10%とか-10%とか。リスクの違いはこれでじゅうぶん伝わるでしょ」
+私「そう？私の周りではオッズ比の方がよく聞くけど？まあ胃がんや大腸がんの研究だと、ハザード比をダントツよく使うけど」
 :::
 
 ::: voice-father
-お父さん「うん、リスク差はもっと使われていいと思う。でも、リスク差にも欠点がある。複数の研究を集めてメタアナリシスをするとき、それぞれの研究から得られたリスク差やリスク比をひとつの値に要約するでしょ」
-:::
-
-::: voice-daughter
-私「ああ、みたことある」
-:::
-
-::: voice-father
-お父さん「このとき問題になるのが、コントロール群（プラセボ群や緩和療法群）で観察されたリスクが、研究によって低かったり高かったりすることなんだ。同じ疾患や治療を扱っていても、予後のいい患者ばかり集めた研究もあれば、予後の悪い患者を対象にした研究もあるでしょ」
-:::
-
-::: voice-daughter
-私「そりゃあるよね」
-:::
-
-::: voice-father
-お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、以下のようなことがわかった」
-:::
-:::::::::::::::::::::::::::::::::
-
-- リスク差は、研究ごとにリスクが変動すると、その影響にともなうばらつきが大きい
-- リスク比やオッズ比は、研究間を通じて数値が安定していた
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「つまりね、指標によって解釈のしやすさや統計的な特徴が違うっていうこと。リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが、おそらく結論」
-:::
-
-::: voice-daughter
-私「じゃあどうしたらいいのよ」
-:::
-
-::: voice-father
-お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、**絶対指標**（リスク差）と**相対指標**（リスク比やハザード比）の両方を示したり、Kaplan-Meier曲線やAalen-Johansen曲線をグラフにするのが正解なんじゃないかな。数字しか出せないなら、いちばんバランスがいいのは、リスク差+リスク比かもね」
+お父さん「オッズ比が出てくるのは疫学の教科書とか国試対策でしょ。あれはケース・コントロール研究を教える都合ってだけだよ。リスクって疾患や死亡が起きる確率そのものでしょ。その差や比を直接とったリスク差・リスク比が基本だって理解しとかないと、単なる暗記になっちゃう。ハザード比は、ハザード関数っていう時間の関数の理解がないと取扱注意だし、前回話したように、層別などの調整を行うとき、リスク比はとても扱いやすい指標だからね」
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple" title="glm()を用いたリスク差、リスク比、オッズ比の計算"}
+::: {.callout-note appearance="simple"  title="ケース・コントロール研究とオッズ比"}
 
-リスク差、リスク比、オッズ比はいろいろな手段で計算できますが、汎用性が高いのは一般化線型モデル（`glm`）を用いる方法です。リンク関数を選ぶことで、リスク差（`link="identity"`）、リスク比（`link="log"`）、オッズ比（`link="logit"`）を選択することができ、交絡因子の調整もしやすいのが便利なところです。ただし、リスク比とオッズ比では、回帰係数の指数をとるひと手間が必要です。表1のリスク差、リスク比、オッズ比を再現するコードを示しておきますので、参考まで。
+古典的なケース・コントロール研究は、コホートの中から疾患を発生したケースを特定し、疾患を発生しなかったものの中からコントロールを選択し、ケースとコントロールの曝露状況を比較する研究です。言い換えると、この研究デザインでは、一部の集団のみ（ケースとコントロールのみ）について、過去の曝露状況を調査します。そうすると、コホートの一部しか曝露状況がわからないから、曝露群・非曝露群のリスクの分母がわかりませんよね。そこで、リスク比の代わりに「曝露オッズ比」を求める、と疫学の教科書には書かれています。ただし、古典的なケース・コントロール研究とは違い、最近ではデータベースが利用できたり、研究デザインを工夫していたりするため、リスク比を計算できる状況も増えてきています。
 :::
 
-::: {.callout-note appearance="simple" collapse="true" title="Rコードと結果はこちら"}
-```{r warning=FALSE}
-dat <- data.frame(
-  treat = factor(c("palliative", "palliative", "chemotherapy", "chemotherapy"), levels = c("palliative", "chemotherapy")),
-  death = c(1, 0, 1, 0),
-  n     = c(30, 20, 15, 35)
-)
-dat
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
-fit_identity <- glm(
-  death ~ treat,
-  family  = binomial(link = "identity"),
-  weights = n,
-  data    = dat
-)
-risk_difference <- coef(fit_identity)[["treatchemotherapy"]]
-print(risk_difference)
+リスク比とオッズ比が1より小さいとき、オッズ比はリスク比より必ず小さくなるといいました。それでは、2群をオッズ比で比較するときのp値は、リスク比で比較するときのp値より、小さくなる（つまり有意になりやすく、検出力が向上する）のでしょうか。ただし、実際にデータから計算されたp値だと、検定の種類の選び方に影響されるし、偶然性も入ります。理論上の期待値がどうなるか考えてみてください。
 
-fit_log <- glm(
-  death ~ treat,
-  family  = binomial(link = "log"),
-  weights = n,
-  data    = dat
-)
-risk_ratio <- exp(coef(fit_log)[["treatchemotherapy"]])
-print(risk_ratio)
-
-fit_logit <- glm(
-  death ~ treat,
-  family  = binomial(link = "logit"),
-  weights = n,
-  data    = dat
-)
-odds_ratio <- exp(coef(fit_logit)[["treatchemotherapy"]])
-print(odds_ratio)
-```
+1.  オッズ比のp値は、リスク比のp値より、期待値の上で小さい
+2.  オッズ比のp値は、リスク比のp値より、期待値の上で大きい
+3.  オッズ比のp値は、リスク比のp値と、期待値の上で等しい
 :::
 
-::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
+-   **正解は3です**
 
-一般化線型モデルの一種であるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます（田中2022）。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
-
-1.  ロジスティック回帰を用いてリスク比を計算できる
-2.  ロジスティック回帰を用いてリスク比を計算できない
-:::
-
-::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
--   **正解は1です**
-
-ロジスティック回帰の共変量に、数値を代入することで、確率を計算することができます。共変量として、2群（たとえば抗がん剤投与群と緩和療法群）を指定すれば、それぞれの群の確率が求まりますよね。その比をとれば、リスク比が計算できます。
+リスク比やオッズ比は最尤法で推定することが普通です。最尤法を用いるとき、検定の性能（検出力など）は、指標の選び方によらず一定、ということが統計学で知られています。直感的な説明をすると、“同じデータから同じ情報を引き出している”から、どの指標を使って差を推定しても、検定としての力は変わらないのです。
 :::
 
 ### 文献
 
-- Furukawa TA, Guyatt GH, Griffith LE. Can we individualize the ‘number needed to treat’? An empirical study of summary effect measures in meta-analysis. Int J Epidemiol 2002; 31: 72-6
+- VanderWeele T. On a square-root transformation of the odds ratio for a common outcome. Epidemiology 2017;28(6):e58–e60
 
-- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
-
-### このシリーズとRスクリプト
+### 次のエピソードとRスクリプト
 
 - [Silent Confusions Hidden in Percentages](effects-1.html)
 - [Who Is This Percentage About? Target Populations and Attributable Fractions](effects-2.html)
-- [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](effects-3.html)
-- [When Odds Ratios Approximate Risk Ratios—and When They Fail](effects-4.html)
-- [From Risk and Rate to Survival and Hazard](effects-5.html)
-- [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example](effects-6.html)
-
-- [Statistical Terms in Plain Language](glossary.html)
+- [When Odds Ratios Approximate Risk Ratios—and When They Fail](effects-3.html)
+- [From Risk and Rate to Survival and Hazard](effects-4.html)
+- [A First Note on Cox Regression](effects-5.html)
+- [After Cox Regression: A Case Study and R Demonstration](effects-6.html)
 
 - [effects.R](../from-coffee-chat-to-r/effects.R)
 
@@ -265,5 +169,5 @@ print(odds_ratio)
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
+- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks](frequentist-4.html)
 - [Statistical Terms in Plain Language](glossary.html)
-
