--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -1,458 +1,312 @@
 ---
-title: "Where My Logistic Regression Went Wrong"
+title: "Logit: How a Transformation Shapes an Effect"
+description: ""
+tags:
+  - Clinical trial
+  - Language & writing
+  - Research hypothesis
+  - Survival & competing risks
 format:
   html:
     toc: true
+date: 2025-12-08
 ---
 
-```{=html}
-<style>
-header#title-block-header.quarto-title-block {
-  display: none !important;
-}
-
-body {
-  margin: 0;
-  background: #ffffff;
-  color: #2b1f1a;
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 1.55;
-}
-
-h1, h2, h3 {
-  font-family: "Georgia", "Times New Roman", serif;
-  color: #3a2a22;
-  font-weight: 600;
-}
-
-h3 {
-  margin-top: 2.4rem;
-}
-
-a {
-  color: #8b4a24;
-  text-decoration: none;
-}
-a:hover {
-  color: #6f3718;
-  text-decoration: underline;
-}
-
-.navbar {
-  background: #ffffff !important;
-  border-bottom: 1px solid #e6e0da;
-  margin-bottom: 0 !important;
-}
-.navbar .navbar-brand,
-.navbar .navbar-nav > li > a {
-  color: #3a2a22 !important;
-  border-bottom: 2px solid transparent;
-  padding-bottom: 2px;
-}
-.navbar .navbar-nav > li > a:hover {
-  border-bottom-color: #8b4a24;
-}
-
-.hero-text {
-  padding: 1.5rem 0;
-  color: #3a2a22;
-}
-
-.project-card {
-  border: 1px solid #e6e0da;
-  padding: 1.3rem 1.5rem;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-  background: #ffffff;
-  border-radius: 6px;
-  margin-bottom: 1.5rem;
-}
-
-.about-section {
-  border: 1px solid #e6e0da;
-  padding: 1.5rem;
-  border-radius: 0;
-  background: #ffffff;
-  margin-top: 2.5rem;
-}
-
-.about-section::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.author-photo {
-  float: left;
-  margin-right: 1rem;
-  border-radius: 50%;
-}
-
-.btn-link {
-  display: inline-block;
-  border: 1px solid #8b4a24;
-  color: #8b4a24;
-  padding: 0.4rem 0.9rem;
-  font-size: 0.9rem;
-  border-radius: 3px;
-}
-.btn-link:hover {
-  background: #8b4a24;
-  color: #ffffff;
-}
-
-.content-narrow {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 1.8rem 1.2rem 2.5rem;
-}
-
-.hero-header {
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
-}
-
-.hero-header-img {
-  width: 100vw;
-  height: min(400px, 45vh);
-  object-fit: cover;
-  object-position: 50% 40%;
-  display: block;
-}
-
-.dialogue p {
-  line-height: 1.7;
-}
-.dialogue .voice-father p {
-  color: #7a3e1a !important;
-}
-.dialogue .voice-daughter p {
-  color: #234f7c !important;
-}
-.dialogue .voice-daughter,
-.dialogue .voice-father {
-  margin-bottom: 0.4rem;
-}
-
-.text-right {
-  text-align: right;
-}
-.serif-block p {
-  font-family: "Georgia", "Times New Roman", serif;
-  font-size: 0.9em;  line-height: 1.6;
-}
-</style>
-```
-
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Adjusting for Bias III − Where My Logistic Regression Went Wrong
+# Adjusting for Bias III− Logit: How a Transformation Shapes an Effect
 
 ::: {.serif-block .text-right}
-Keywords: confounding/collapsibility, effect measure, hypothesis/outcome/population, generalized linear model, language/writing
+Keywords: effect measure, generalized linear model
 :::
-
 
 ------------------------------------------------------------------------
 
-### どうしてオッズ比が無限大になっちゃったの？
+### 数式を使ってロジスティック回帰を教えてよ
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「あのさ、昨日のロジスティック回帰の表の続きをしない？コーヒー淹れたから」
-:::
+お父さん「ああ、ここにいたんだ。コーヒーと大福？」
+::: 
 
 ::: voice-daughter
-私「えーお手やらわかに。コーヒーもありがとう。この表の話だよね」
-:::
-:::::::::::::::::::::::::::::::::
+私「うんうまいよ」
+::: 
 
-| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   |$\chi^2$| p値   |
-|------------|--------|--------|----------|---------------|-------|--------|
-| Intercept  | 1      | -27.25 | 3.03     | -33.20～-21.30| 80.55 | \<0.01 |
-| STOMA      | 1      | 1.41   | 1.54     | -16.1～4.45   | 0.84  | 0.3588 |
-| AGE        | 1      | 1.47   | 1.48     | -1.42～4.36   | 0.99  | 0.3197 |
-| SEX        | 1      | 25.72  | 0.00     | 25.72～25.72  |       |        |
-| INCOME     | 1      | -0.00  | 0.00     | -0.00～0.00   | 0.58  | 0.4481 |
-
-::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「そう、これね、間違いではないんだけど、まだよくできる。表を作成するときには、情報が自然に入ってくるように、読者の立場で考えなくちゃ。具体的な注意点はこんなところかな」
-:::
-:::::::::::::::::::::::::::::::::
-
--   読者の立場で考える
--   表のフォーマットに従う
--   単位・表示桁数に気を配る
--   表タイトル・脚注を利用して補足情報を伝える
--   数え尽くしの原則を守る
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「ロジスティック回帰からいろんな指標が出せるけど、表にはオッズ比、95%信頼区間、p値だけあれば普通はじゅうぶんだよ」
-:::
+お父さん「食べながらでいいから聞いてよ。ロジスティック回帰はね、医学研究でよく使うから知っておいた方がいいと思って。簡単にいうと、2値データのための回帰モデルの一種。ストーマ造設、年齢、性別、年収といった共変量が、復職の有無のような2通りの値をとるアウトカムとどの程度相関するかを、調べることができる」
+::: 
 
 ::: voice-daughter
-私「それはこの表にも載ってるよね」
-:::
+私「もうちょっと統計っぽく教えてよ」
+::: 
 
 ::: voice-father
-お父さん「載っていません。この表の”推定値”は、みたところ回帰係数の値でしょ。それを換算してオッズ比のスケールに直さないといけない。換算するには、回帰係数$\beta$の指数をとって、$OR=\exp(\beta)$を求めればいい」
-:::
+お父さん「ん？統計手法には、パラメトリック法とノンパラメトリック法があるけど、ロジスティック回帰はパラメトリックモデルの一種として位置づけられる。最近の教科書では、一般化線型モデルのひとつとして扱われることが多いかな」
+::: 
 
 ::: voice-daughter
-私「そうなのか。ストーマのオッズ比は$\exp(1.41)=4.1$ってことね。あれ？$\exp(25.72)$を計算してみると、パソコンに表示できないくらいに大きい数字になったんだけど。ほとんど無限大に近い数字だ。性別の影響が強いのかな。年収は$\exp(-0.00)$？なんか変だな」
-:::
+私「そういうんじゃなくてさ。ほら、リンク関数とか出てきたでしょ。ああいうのがでてくると消化不良でさ」
+::: 
 
 ::: voice-father
-お父さん「これはよくあるトラブルだよ」
-:::
+お父さん「数式使っていいの？」
+::: 
 
 ::: voice-daughter
-私「そうなの？」
-:::
+私「うん。数式でてくると、ところどころわからないんだけど。ごまかされるのもいや。ほら、このペン使っていいよ」
+::: 
 
 ::: voice-father
-お父さん「復職しなかった患者さんはほとんど女性だったんじゃない？**擬似完全分離（quasi-complete separation）**っていうデータの配置上の問題が起きちゃってて、性別の回帰係数を、うまく推定できていないんだ。この先は少し長くなりそうだから、ちょっとたばこ吸わせてもらうね」
-:::
-:::::::::::::::::::::::::::::::::
-
-
-::: {.callout-note appearance="simple" title="完全分離"}
-
-ロジスティック回帰の回帰係数は、最尤法（maximum likelihood）という汎用的な推定方法によって計算されます。これはある種の方程式を解くことに対応していますが、データから必ずしも解が求まるわけではありません。これが完全分離（complete separation）や擬似完全分離（quasi-complete separation）という問題です。これらの問題が起きると、回帰係数が求まらなかったり、不安定だったりするため、共変量の数の削減や、最尤法以外の推定方法の利用など、なんらかの根本的な対処が必要になります。
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「（灰皿にたばこを押しつけながら）正しい計算ができていないわけだから、ロジスティック回帰の結果を示すのはやめた方がいい。性別だけじゃなくて年収も問題だね。単位が円のまま扱うと、桁が大きすぎて数字が読めない。単位を万円にして、年収が1万円増えたら復職率がどう変化するかを示すといいんじゃないかな。性別と年収の扱いは気になると思うけど、今はこれくらいにしよう。表の体裁を直してあげるよ」
-:::
-
+お父さん「じゃあ、個人のリスクと共変量の関係から話せばいいのかな」
+::: 
 ::::::::::::::::::::::::::::::::: 
 
-|              | オッズ比 | 95%信頼区間 | p値  |
-|--------------|----------|-------------|------|
-| ストーマなし | （基準） |             |      |
-| ストーマあり | 4.13     | 0.20～85.23 | 0.36 |
-| 65歳未満     | （基準） |             |      |
-| 65歳以上     | 4.35     | 0.24～78.60 | 0.32 |
-| 女性         | （基準） |             |      |
-| 男性         | ∞        | ∞～∞        |      |
-| 年収（万円） | 1.00     | 0.98～1.01  | 0.45 |
 
-\*手術後1年以内の復職をアウトカムとした多変量ロジスティック回帰
+::: {.callout-note appearance="simple" title="ロジスティック回帰"}
 
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「あれ？オッズ比4.13倍ってことは、復職率がだいたい4倍になったってこと？そんなことある？」
-:::
+$N$人の対象者に番号をつけて$i=1,...,N$で表すことにします。個人$i$のリスクを$\pi_i$で表します。$\pi_i$は、個人レベルの$N$個のパラメータですが、そのすべてを別々に推定したいわけではありません。$\pi_i$に関連する$p-1$個の共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が測定されており、両者の関連の強さに関心があるとします。このとき
 
-::: voice-father
-お父さん「違う違う。あのね、オッズ比はオッズの比をとったもの。オッズっていうのは、復職率を$\pi$で表すと、それを$\pi/(1-\pi)$と変換したものなんだ。$\pi$が0に近いときは、オッズ比は$\pi$の比に近い値になるんだけど、比の分子と分母の取り方で、向きが変わることに注意しないといけない。今回は、モデルの定義上、ストーマありの方が"復職できない"オッズが約4倍という意味だよ。ただし、2値アウトカムを"復職できない"に取ると、向きは逆になる」
-:::
+$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 
-::: voice-daughter
-私「わかりにくいのう」
-:::
+という関係が成り立つ確率分布をロジスティック回帰といいます。
 
-::: voice-father
-お父さん「じゃあ、どこに気を付けて手直ししたか説明するね。ロジスティック回帰では、共変量はなにで、どう扱ったかを正確に伝えることが大切なんだ。データをみると、年齢は65歳未満か以上かで分類した2値データみたいだね。そういうときは、何歳で分類したか、どの分類を基準にしたかわからないと、結果を読み取れない。また、連続データでは、忘れがちだけど単位が必要。年収の単位を円から万円にして、表に追記しておいたよ」
-:::
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note appearance="simple" title="注意事項1. フォーマット"}
-
-論文で示される表には、決められたフォーマットがあります。表は、行（row）と列（column）から構成され、行と列は概念的には対称ですが、視覚的には役割が異なります。英語圏では、表は左から右に、行ごとに読むことが慣習になっています。そのため、このサイトに示されている表のように、縦線で区切ることはしません。
-
-数字の意味をわかりやすく伝えるためには、どこにどのような情報を配置するかに気を配るべきです。さきほどの表では、列が指標の種類を表すというシンプルな方針を採用しています。そのため、数字がオッズ比、95%信頼区間、p値に対応することが一目でわかります。また、必要な情報から順に読み取れるように、各行または各列の順序にも気を配りたいところです。
-
-ある程度大きな表であれば、情報はグループにわけられることが普通です。表のフォーマットも、グループが視覚的にわかりやすいように工夫できます。たとえば後に出てくる表1では、行と列でそれぞれグループ化がなされています。行をグループ化するときには字下げ（indent）を用います。性別の内訳を示すために字下げがなされていますよね。また、列をグループ化するときにはスパナ（spanner）を用います。“ストーマ保有者”、“ストーマ非保有者”といった列の見出しを、スパナヘッド（spanner head）といいます。
-
-:::
-
-::: {.callout-note appearance="simple" title="注意事項2. 単位・表示桁数"}
-
-表では測定単位（unit）を明らかにすることが重要です。臨床検査値を扱う論文を投稿するときは、その雑誌の編集方針をみて、どのような単位系を採用しているか確認しましょう。
-
-数字の表示桁数は、ある程度桁数やルールが統一されていなければ、印象を悪くします。統計ソフトウェアが出力する数字は桁数が大きいことがありますが、そのまま表に示す必要はありません。有効数字2桁または3桁か、もともとの測定値より桁数を1桁大きく示すのが基本です。
-
-日本工業規格（Z 9041-1:1999）によると、平均の有効数字は、測定値より1～2桁大きく、標準偏差の有効数字は、最大でも3桁程度といわれています。つまり、むやみに数字の表示桁数を増やしても精確性が増すわけではないのです。年齢を例に挙げると、測定単位は「歳」なので、小数点1桁まで示すとよいでしょう。表1の年齢の平均・標準偏差では、そのようになっています。p値については、小数点以下2桁か3桁まで報告すれば、有意水準（0.05が多い）との大小関係が読み取ることができるので、必要十分でしょう。
-
+この式の係数$\beta_0,\beta_1,...,\beta_{p-1}$を回帰係数（regression coefficients）、特に$\beta_0$を切片項（intercept）といいます。正規分布は平均と分散というパラメータで形状が決まりますよね。それと同じように、ロジスティック回帰の確率分布は、回帰係数$\beta_0,\beta_1,...,\beta_{p-1}$で規定されます。$\pi_i$は、$\beta_0,\beta_1,...,\beta_{p-1}$が与えられれば計算できますが、直接推定するわけではありません。
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「表の作り方をご助言いただけるのはありがたいんだけどさ、肝心のロジスティック回帰はどうすればいいんだろ」
-:::
+私「ふむふむ。ひとりひとりに$\pi_i$と$X_{i,1},X_{i,2},...,X_{i,p-1}$がある。そしてロジスティック回帰の式で結びついているわけね。そして、その式の係数が回帰係数」
+::: 
 
 ::: voice-father
-お父さん「擬似完全分離を避けるには、共変量の数を削るのがわかりやすい。今回はサンプルサイズが不足しているみたいだから、他の共変量はすべて使わないで、単にストーマ造設と復職率だけの関連を調べたらどうかな？1パラメータあたり5〜10イベント程度は欲しいといわれるからね。その場合も、通常の$\chi^2$検定は使わない方がいいよ。**Fisherの正確検定**と**Clopper-Pearson信頼区間**っていう方法が推奨されている」
-:::
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note appearance="simple"  title="2値データの解析においてサンプルサイズが不足したときの指針"}
-
--   ロジスティック回帰の共変量の数を減らす（目安としてパラメータの数のおよそ5倍のイベント数が必要）
--   $\chi^2$検定ではなくFisher正確検定を用いる
--   2項分布に基づく信頼区間（Clopper-Pearson信頼区間）を用いる（田中2022）
-
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-
-### 足りなかったたくさんの情報
-
-::: voice-daughter
-私「でも、ロジスティック回帰で交絡因子を調整しなさいっていったのはお父さんなんだよ」
-:::
-
-::: voice-father
-お父さん「そうだね、それは重要な問題だよね。じゃあ、ストーマ保有者と非保有者で、年齢、性別、年収の分布がどれくらい違うかをまず確認しようか。前にも話したとおり、年収を尋ねたことでバイアスが生じていないかとか、年収を尋ねて欠測が多いんじゃないかとか、いろいろ気になるし。もし分布が揃ってたら、調整しなくても影響は小さいかもしれない」
-:::
-
-::: voice-daughter
-私「あ、その表なら資料にあるよ」
-:::
-
-::: voice-father
-お父さん「じゃあ、あとはストーマ造設と復職率の関連を表にするだけだね。資料には、以下の表1と表2を載せればいいよ」
-:::
-
-:::::::::::::::::::::::::::::::::
-
-表1. 20XX～20YY年にZZ病院で手術を受け、がんサバイバー復職率調査に回答した直腸がん患者80人の背景因子の記述
-
-|              | ストーマ保有者（N=20） | ストーマ非保有者（N=60） |
-|--------------|------------------------|--------------------------|
-| 年齢（歳）   | 57.0 (8.6)             | 65.5 (10.4)              |
-| 65歳以上     | 10.0%                  | 51.7%                    |
-| 性別         |                        |                          |
-| 　男性       | 35.0%                  | 53.3%                    |
-| 　女性       | 60.0%                  | 46.7%                    |
-| 　不明       | 5.0%                   | 0.0%                     |
-| 年収（万円） | 508 (77)               | 514 (101)                |
-
-\*平均（SD）または%
-
-表2. 直腸がん患者のうちストーマ保有者20人と非保有者60人の復職率の比較
-
-|              | N   | 1年以内に復職せず | 復職率 | 95%信頼区間\* | p値† |
-|--------------|-----|-------------------|--------|---------------|------|
-| ストーマあり | 20  | 1                 | 95.0%  | 75.1～99.9%   |      |
-| ストーマなし | 60  | 2                 | 96.7%  | 88.5～99.6%   | 1.00 |
-
-\*Clopper-Pearson法
-
-†Fisher正確検定
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「集団のアウトカムを比較したいときは、その前に表1のようにそれぞれの集団の背景因子を記述するべきだよ。ストーマ保有者は20人しかいなくて、非保有者に比べて、平均年齢が低くて、女性が多いわけだ。やっぱり最終的にはロジスティック回帰で、背景因子の違いを調整しないといけないかもね。現時点での調査の回答率はどうだった？」
-:::
-
-::: voice-daughter
-私「調査票は100人に送って、80人から回収できたから、回答率は80%かな」
-:::
-
-::: voice-father
-お父さん「項目ごとの無回答（item non-response）についてはどう？」
-:::
-
-::: voice-daughter
-私「そっか、調査票を回収できたかと、項目ごとの回答があったかは別だもんね。年齢は全員回答してくれたよ。性別は1人記入していなかった。項目ごとの回答数まで、表に示した方がよかった？」
-:::
-
-::: voice-father
-お父さん「ううん、論文ではそこまで細かい数字は示さないことが多い。重要な変数が欠測してたりするなら別だけどね。たとえばさ、ロジスティック回帰を行うとき、性別不明はどう扱ったの？」
-:::
-
-::: voice-daughter
-私「統計ソフトウェアのマニュアル調べたら、欠測は自動的に除外されるんだって」
-:::
-
-::: voice-father
-お父さん「そうすると解析対象の人数が80人じゃなくて79人に減るんだから、表を作るときにそこを説明しておかないといけないんじゃない？一般に、ロジスティック回帰の結果を示す表だけだと、どんなデータかわかりにくいっていう問題がある。復職できなかったのは3人しかいないって、表2をみるまで気づかなかったよ？まだ1施設からのデータしか集まってないからでしょ。それじゃあロジスティック回帰はしたくてもできないよね」
-:::
-
-::: voice-daughter
-私「確かにね。そのあたりの状況を、読者に伝えなきゃって気持ちが足りなかったみたい」
-:::
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note appearance="simple"  title="注意事項3. 表タイトル・脚注"}
-
-読者が表を読むときのことを想像してみてください。最初に目にするのは、表に示された結果自体ではなく、表タイトルの情報です。簡潔な表タイトルをよく目にしますが、これはもったいないことです。表1、表2の表タイトルには、調査が行われた状況、対象疾患、人数、統計解析の目的などが含まれています。表タイトルを決めるときは、可能な限り多くの情報を伝えるように工夫しましょう。
-
-表には様々な数字が示されますから、どういった指標かわかりにくいときがしばしばあります。もしかしたら、複雑な統計手法から計算されたものかもしれません。データを解析するために用いた統計手法は、方法のセクションで説明することが基本ですが、読者への配慮として、表の脚注（footnote）を利用することもあります。表1でいえば、括弧内の数字の意味は自明ではないので、“平均（SD）または%”と脚注がついていますよね。表2の脚注には、どの統計手法を用いて信頼区間とp値を計算したかが説明されています。このように読者にとってなじみのない指標や表現には、補足説明が必要です。
-
-脚注を参照するための記号には、a、b、cまたは\*、†、‡、§、¶を用いるのが正式です。
-
-:::
-
-::: {.callout-note appearance="simple"  title="注意事項4. 数え尽くしの原則"}
-
-統計解析の経験があるものなら誰でも、様々な理由で対象者が除外されるため、個々の解析で、人数が必ずしも同じにならないことを知っているものです。透明性を高めるために、統計解析ごとに、何人が対象となったか報告するべきです。
-
-統計家の間では、**数え尽くしの原則（principle of exhaustion）**という言葉があります。分類変数の分類が複雑だったり、欠測データがあったりするときには、分類ひとつひとつの人数を合計し、それが全体の人数に合うかどうかを確認せよ、というのがこの原則の教えです。最初に作成した表では人数が示されておらず、どのようなデータが解析されたのかわかりません。一方、表1・表2では、何人が解析対象で、何人が復職したのかが記述されています。さらに、数え尽くすと全体80人や100%に一致することから、正しく集計されたことが読み取れます。
-
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「ちなみにお父さん、もし”臨床疑問と研究仮説”で例を挙げてくれたときの研究仮説3みたいに、研究の目的が復職率と関連する因子の探索だとしたら、何か変わることはある？」
-:::
-
-::: voice-father
-お父さん「どんな特徴を持った患者が、復職が難しいのか、予測因子をみつけたいってことかな。予測因子の候補となるデータがあるなら、それをロジスティック回帰の共変量に入れることで、予測因子の探索を行うことができるよね」
+お父さん「そう。ロジスティック回帰の裏には2項分布があって、実は$\pi_i$は2項分布の確率に対応している。2項確率の式に、共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が含まれていて、アウトカムと共変量の関連の強さを、回帰係数が決めるんだ」
 ::: 
 
 ::: voice-daughter
-私「うんうん」
-:::
+私「この式まではわかったよ」
+::: 
 
 ::: voice-father
-お父さん「こういった探索的検討では、特定の因子に関心がないってことが第一の違いだよ。ストーマと復職率の関連を調べるときは、ストーマのオッズ比やp値を求めることがゴールでしょ。予測因子の探索では、予測因子の候補をできるだけたくさん集めて、どの因子をモデルに入れたら予測精度が高いか、逆にどの因子は要らないかを調べることがゴールになる。これを変数選択っていうんだ」
+お父さん「よかった。ちょっと補足するとね、確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、ロジスティック回帰では、アウトカムと共変量の関係が**ロジット関数（logit function）**で結びつくと仮定していること。`glm()`について話したの覚えてる？」
 ::: 
 
 ::: voice-daughter
-私「ゴールは違ってもさ、p値を使えばよくない？有意な因子をモデルに入れたらいいんでしょ」
+私「うん。リンク関数を`link`で指定することは理解したよ。それがこの式？」
+::: 
+
+::: voice-father
+お父さん「そうだよ。`glm()`の引数は、`family`、`y ~ x1 + x2`、`link`なんだけど`family=binomial()`のように
+2項分布を選ぶと自動的にロジット関数が使われる。ロジスティック回帰の左辺をみてよ」
+::: 
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note appearance="simple" title="リンク関数とロジット関数"}
+
+個人のパラメータと共変量との関係を結びつける1対1の単調な変換
+
+$g(\pi_i)=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
+
+のことを、一般に**リンク関数（link function）**といいます。ロジスティック回帰のリンク関数は
+
+$g(\pi_i)=\log(\frac{\pi_i}{1-\pi_i})$
+
+です。この関数はロジット関数と呼ばれ、ロジスティック回帰を特徴付けています。
+:::
+
+### ロジット関数の特徴
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「単に関数に名前をつけただけでしょ。もうちょっと解説が欲しいなあ」
+::: 
+
+::: voice-father
+お父さん「そうだよね。ロジット関数も関数の一種だから、グラフにした方が特徴がつかみやすい。次の説明だとどうかな」
+::: 
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note appearance="simple" title="ロジット関数の形状"}
+
+仮に共変量が1個で、連続データだったとしましょう。確率$\pi_i$と共変量$X_i$の関係は、ロジット関数を通じて
+
+$\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
+
+という式で表されることになります。
+
+図は、このロジット関数の$\exp(\beta_1)$の値を5、10、20、200と設定して、$X_i$を0から1までの範囲で変化させた、ロジット関数の逆関数のプロットです。$\exp(\beta_1)$は、$X_i$が1SD変化したときのオッズ比に相当します。つまり、図でもっとも傾きの小さい黒い曲線は、オッズ比5のときのものです。この曲線はそれほど変化が急にはみえませんが、医学研究ではオッズ比5でもかなり強い関連です。
+
+このように、ロジット関数の逆関数はS字型の曲線を表しています。X軸方向にどんな値をとったとしても、Y軸方向の変化は0から1の範囲に収まることが、特徴のひとつです。そして、曲線の傾きは回帰係数$\beta_1$によって決まります。
+
+![](logistic-regression-4.png)
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「やっとイメージがわいた。ロジット関数って、確率と共変量との関係を表してるんだ。どれくらい年齢が上がると、復職できる確率が下がるか、みたいなことね」
+::: 
+
+::: voice-father
+お父さん「さらに、ロジスティック回帰は、がんサバイバー調査のように群を比較するときにも使われる。シンプルに2人の対象者を比べるとどうなるかって話をするね」
+::: 
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple" title="ロジット関数とオッズ比の関係"}
+
+共変量が1個のとき、ロジスティック回帰は
+
+$\log \left(\frac{\pi_i}{1-\pi_i}\right)=\beta_0+\beta_1X_{i}$
+
+と表すことができます。そして、対象者$i=1$では$X_{1}=0$、対象者$i=2$では$X_{2}=1$という値をとる状況を考えてみましょう。それぞれの対象者の共変量の値を、上の式に代入すると、以下のようになります。
+
+$\log\left(\frac{\pi_1}{1-\pi_1}\right)=\beta_0$
+
+$\log\left(\frac{\pi_2}{1-\pi_2}\right)=\beta_0+\beta_1$
+
+ここで、$\pi_1$は対象者1の確率パラメータ、$\pi_2$は対象者2の確率パラメータです。これらの確率パラメータから、オッズ比を求めるとどうなるでしょうか。それは、以下の式で計算されます。
+
+$\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\beta_0+\beta_1)\div \exp(\beta_0)=\exp(\beta_1)$
+
+この結果は、回帰係数$\beta_1$の指数をとるとオッズ比が得られることを意味しています。
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「なるほど、回帰係数からオッズ比を計算できるってこういうことなのね」
+::: 
+
+::: voice-father
+お父さん「このオッズ比の計算ができるのは、ロジット関数の特徴によるものでしょ。だから、ロジスティック回帰はオッズ比のモデルともいえるんだ。リスク比にはリスク比のモデルがあるし、リスク差にはリスク差のモデルがある。大事なのは`family`、`y ~ x1 + x2`、`link`を選ぶことで、データの型にあった回帰モデルを指定できるってこと。yとxにそれぞれ連続変数を指定すると、散布図に回帰直線を掛くことができるし、計数データにPoisson回帰を当てはめたりもできる。一般化線型モデルは、生存時間データや経時データ以外ならほとんど対応できる汎用的な統計手法なんだ」
+::: 
+:::::::::::::::::::::::::::::::::
+
+### ロジスティック回帰の可逆性
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「でもね、その説明だとみんなロジスティック回帰を使ってる理由にはなってないよね。`link="logit"`より`link="identity"`、つまり変換しなくたっていいじゃない」
+::: 
+
+::: voice-father
+お父さん「それはリスク差のモデルだね。無変換のモデルが悪いわけじゃないんだけど、ロジット関数が選ばれた理由はちゃんとある。この話はちょっと難しいかもしれない。たとえるならね、ロジスティック回帰はルービックキューブのように構造が安定しているんだ」
+::: 
+
+::: voice-daughter
+私「どういう意味？」
+::: 
+
+::: voice-father
+お父さん「操作を加えても構造が維持されるっていうこと。どんな方向で、どんな順序で面を回しても、ルービックキューブは元に戻せる。解けば絵の向きもきちんと揃う。統計解析に話を戻すと、人工的にデータに変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
+::: 
+
+::: voice-daughter
+私「それはよくやることだよね」
+::: 
+
+::: voice-father
+お父さん「統計学者は、いろいろな回帰モデルのうち、変換に対して不変な構造はなにかって考えた。ここでいう変換は、**数学では群作用（group action）**っていうんだけど、ある変換を加えても意味が変わらない操作のこと。ほら、コインの表裏を入れ替えても、コイン投げの確率の本質に影響しないでしょ。考えた結果、2値アウトカムのモデルでは以下のパーツを使うしかないってことがわかった」
+::: 
+
+- 確率分布: 2項分布（指数型分布族）
+
+- 回帰係数×共変量（線型結合）
+
+- リンク関数: ロジット関数
+
+::: voice-father
+お父さん「ここで出てくるロジット関数は、変換しても**可逆性（invertibility）**を保つ唯一の関数なんだ。たとえば死亡確率を$\pi=0.2$とするよ。このとき生存確率は？$1-\pi=0.8$だよね」
+::: 
+
+::: voice-daughter
+私「うん。当たり前」
 :::
 
 ::: voice-father
-お父さん「そういうやり方もあるけどね。予測2乗誤差、ROC曲線、AICといった予測精度専用の指標を使うことも多い。大事なのはね。**予測因子の候補や変数選択の基準を、研究計画書などに書いておくこと**。事前に決めておかないと、どうしても研究者の主観が入っているんじゃないかって批判されるからね」
-:::
-:::::::::::::::::::::::::::::::::
-
-
-::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
-ロジスティック回帰の起源として正しいのは、次の時代のうちどれでしょうか。
-
-1.  1900年以前
-2.  1900～30年
-3.  1931～60年
-4.  1961年以降
+お父さん「この"死亡と生存を入れ替える"という操作が群作用に相当する。ここで問題にしているのはリンク関数$g$だったよね。確率$\pi$を、リンク関数で別のスケール$g(\pi)$に変換したとする。このとき、死亡と生存を入れ替えても、値が反転するだけで構造が維持されるには$g$はどんな性質を持つべき？」
 :::
 
-::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
--   **正解は1です**
+::: voice-daughter
+私「値が反転する、って？」
+:::
 
-少なくとも、ベルギーの数学者Queteletが1838年に出版した書籍に、ロジット関数の式が示されています。ロジスティックという単語は、同じくベルギーの数学者Verhulstが1845年にProceeding of Belgian Royal Academyで、初めて用いられたとされています。
+::: voice-father
+お父さん「つまりこういうこと」
+:::
+
+$$g(1−\pi)=−g(\pi)$$
+
+::: voice-daughter
+私「へ？意味わかんない」
+:::
+
+::: voice-father
+お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクがどれくらい高いかを表す尺度なんだ。死亡と生存を入れ替えたらどうなる？$g(-1\pi)$は死亡リスクの低さを意味するよね。つまり、死亡と生存の入れ替えによって、符号反転はするはず」
+:::
+
+::: voice-daughter
+私「なるほど。$g(1−\pi)=−g(\pi)$という関係が成り立つのはなにか探せばいいのね？」
+:::
+
+::: voice-father
+お父さん「もう少し条件がある。$g(\pi)$という尺度に、上限と下限があったら不便だし、ゼロという基準が必要だよね。だから条件を追加する」
+:::
+
+- $g(1−\pi)=−g(\pi)$
+- $\pi$が0に近づけば$g(\pi)$は−∞に向かう
+- $\pi$が1に近づけば$g(\pi)$は∞に向かう
+- $\pi=1/2$を基準にとって$g(1/2)=0$
+
+::: voice-father
+お父さん「この4つの条件を満たす滑らかな関数は、実はほとんどひとつしかない」
+:::
+
+$$g(\pi)=\log \left(\frac{\pi_i}{1-\pi_i}\right)$$
+
+::: voice-daughter
+私「それがロジット関数ってことか。データを人工的に変換しても解析結果が変わらないってこと？」
+:::
+
+::: voice-father
+お父さん「あれ、そこまでは説明しなかったけど、その通り。可逆性があるモデルでは、データを変換しても構造もそれに合わせて変わってくれて、本質的に同じ解析結果が得られる。みんなが使っている統計手法はね、大半が人間が選んだだけじゃないんだ。数学的な法則がそっと姿を現しているんだよ」
+:::
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
+
+脳卒中発症の有無をアウトカム、LDLコレステロールを共変量としてロジスティック回帰を当てはめたとします。LDLコレステロールの単位をmg/dLからmmol/Lに変換したとき、オッズ比は何倍になるでしょうか。ただし
+
+LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
+
+という関係が成り立ちます。
+
+1.  0.02586倍
+2.  1/0.02586倍
+3.  変化しない
+4.  1、2、3すべて誤り
+:::
+
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
+**正解は4です。**
+
+これは単位を換算するにはどうすればよいかという問題です。ある共変量*X*の効果は、回帰係数*β*との積（*βX*）で表され、それは共変量の単位によらず一定ですよね。このことに気づくと、答えに近づきます。*X*の単位を定数倍すると、*β*は定数分の一に換算されます。ただし、ロジスティック回帰では、回帰係数からロジット関数を経由してオッズ比を求めるため、単位を換算するには、1/0.02586乗のようにべき乗の操作をすることになります。
 :::
 
 ### 文献
 
-- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
+- [田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12271)
 
-### このシリーズとRスクリプト
+### 次のエピソードとRスクリプト
 
-- [From Risk to Logistic Regression](logistic-regression-1.html)
-- [Logit: How a Transformation Shapes an Effect](logistic-regression-2.html)
-- [Where My Logistic Regression Went Wrong](logistic-regression-3.html)
-- [Why Logistic Regression Fails in Small Samples](logistic-regression-4.html)
-- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-5.html)
-
+- [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](logistic-regression-1.html)
+- [From Risk to Logistic Regression](logistic-regression-2.html)
+- [Logit: How a Transformation Shapes an Effect](logistic-regression-3.html)
+- [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
+- [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
+- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
 ### 過去のシリーズと用語集
