--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -1,358 +1,266 @@
 ---
-title: "From Risk to Logistic Regression"
-
+title: "Understanding Collapsibility of Effect Measures: Marginal vs Stratified"
+description: "いわゆる調整解析とSimpsonのパラドックスの関係は？がん臨床試験で用いられる層別Cox回帰にもつながるエピソード。"
+tags:
+  - Bias
+  - Confounding & collapsibility
+  - Effect measure
+  - R simulation
 format:
   html:
     toc: true
 ---
 
-```{=html}
-<style>
-header#title-block-header.quarto-title-block {
-  display: none !important;
-}
-
-body {
-  margin: 0;
-  background: #ffffff;
-  color: #2b1f1a;
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 1.55;
-}
-
-h1, h2, h3 {
-  font-family: "Georgia", "Times New Roman", serif;
-  color: #3a2a22;
-  font-weight: 600;
-}
-
-h3 {
-  margin-top: 2.4rem;
-}
-
-a {
-  color: #8b4a24;
-  text-decoration: none;
-}
-a:hover {
-  color: #6f3718;
-  text-decoration: underline;
-}
-
-.navbar {
-  background: #ffffff !important;
-  border-bottom: 1px solid #e6e0da;
-  margin-bottom: 0 !important;
-}
-.navbar .navbar-brand,
-.navbar .navbar-nav > li > a {
-  color: #3a2a22 !important;
-  border-bottom: 2px solid transparent;
-  padding-bottom: 2px;
-}
-.navbar .navbar-nav > li > a:hover {
-  border-bottom-color: #8b4a24;
-}
-
-.hero-text {
-  padding: 1.5rem 0;
-  color: #3a2a22;
-}
-
-.project-card {
-  border: 1px solid #e6e0da;
-  padding: 1.3rem 1.5rem;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-  background: #ffffff;
-  border-radius: 6px;
-  margin-bottom: 1.5rem;
-}
-
-.about-section {
-  border: 1px solid #e6e0da;
-  padding: 1.5rem;
-  border-radius: 0;
-  background: #ffffff;
-  margin-top: 2.5rem;
-}
-
-.about-section::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.author-photo {
-  float: left;
-  margin-right: 1rem;
-  border-radius: 50%;
-}
-
-.btn-link {
-  display: inline-block;
-  border: 1px solid #8b4a24;
-  color: #8b4a24;
-  padding: 0.4rem 0.9rem;
-  font-size: 0.9rem;
-  border-radius: 3px;
-}
-.btn-link:hover {
-  background: #8b4a24;
-  color: #ffffff;
-}
-
-.content-narrow {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 1.8rem 1.2rem 2.5rem;
-}
-
-.hero-header {
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
-}
-
-.hero-header-img {
-  width: 100vw;
-  height: min(400px, 45vh);
-  object-fit: cover;
-  object-position: 50% 40%;
-  display: block;
-}
-
-.dialogue p {
-  line-height: 1.7;
-}
-.dialogue .voice-father p {
-  color: #7a3e1a !important;
-}
-.dialogue .voice-daughter p {
-  color: #234f7c !important;
-}
-.dialogue .voice-daughter,
-.dialogue .voice-father {
-  margin-bottom: 0.4rem;
-}
-
-.text-right {
-  text-align: right;
-}
-.serif-block p {
-  font-family: "Georgia", "Times New Roman", serif;
-  font-size: 0.9em;  line-height: 1.6;
-}
-</style>
-```
-
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Adjusting for Bias I − From Risk to Logistic Regression
+# Adjusting for Bias I − Understanding Collapsibility of Effect Measures: Marginal vs Stratified
 
 ::: {.serif-block .text-right}
-Keywords: confounding/collapsibility, effect measure, generalized linear model, language/writing
+Keywords: clinical trial, confounding & collapsibility, effect measure, R simulation
 :::
 
 ------------------------------------------------------------------------
 
-::: {.callout-note appearance="simple" collapse="true" title="前回までのあらすじ"}
-はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、女医である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。その後いくつか質問するうちに、父のことを「こいつ使える」と思い始めたのだった。
-:::
-
-### ロジスティック回帰をしてみたんだけど
+### 効果の指標
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「これみてよ、お父さん」
+私「お父さん、なにか甘いものない？お腹すいちゃって」
 :::
 
 ::: voice-father
-お父さん「ん？どうしたの、この資料」
+お父さん「大福だったら買い置きがあるよ。コーヒーとお茶、どっちにする？」
 :::
 
 ::: voice-daughter
-私「前に相談したがんサバイバーの復職状況を調べる研究についてなんだけどね、うちの診療科だけだけど調査票が集まったから、解析してみたの。その結果をまとめた資料よ」
+私「コーヒー。ミルクも入れて。お茶もいいけど、統計の話を聞きたいときはコーヒーの気分なんだ。このあいだも、疫学で使う統計の話をしてくれたでしょ。でも、医学部で講義を受けたのが昔すぎてさ。疫学ってなにか忘れちゃったな」
 :::
 
 ::: voice-father
-お父さん「ああ、あれね。ストーマ造設と復職率の関連を調べることにしたんだっけ。資料のどこをみればいいの？」
+お父さん「疫学か。疫学は、集団における病気について調べる分野だよね。病気の原因を調べたり、予防方法や公衆衛生対策を立てたりする。がん、循環器、感染症など扱う病気によってだいぶ違うよね。まあ、疫学の基本はなにかっていったら、コホート研究とリスクかな」
 :::
 
 ::: voice-daughter
-私「この表なんだけど。**ロジスティック回帰（logistic regression）**をしてみたんだ。その結果をまとめたよ。どうかな」
+私「そうだったね、この前のワクチン有効率のやつは、リスクもワクチン有効率もパーセンテージ表記だからまぎらわしいって話だった。効果の指標（effect measure）もいろいろあったな。リスク比、オッズ比、ハザード比だっけ？」
+:::
+::::::::::::::::::::::::::::::::: 
+
+### リスク比とオッズ比、どっちを使う？
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「じゃあ、リスク比とオッズ比の話をしようか。コーヒー飲みながら気楽に聞いてね。統計学が気にするのは、**それぞれの指標の意味・解釈**の違いもあるけど、それ以上に**数学的な性質**を考えているんだよね。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じっていったらいいかな」
+:::
+
+::: voice-daughter
+私「ふーんそうなんだ」
+:::
+
+::: voice-father
+お父さん「後は、ケース・コントロール研究のような、コホートの一部の情報しかない状況でも計算できるし、ロジスティック回帰のようなモデリングするとき利用しやすいのがいいところかな。悪い面はね、層別解析をしたとき、ちょっと不自然な計算結果になる」
+:::
+
+::: voice-daughter
+私「ケース・コントロール研究って、データベースとかを使って後ろ向きに調査するやつね。これも疫学。そうねえ、不自然な数字になるのは困るんじゃない？層別なんてしたこと私はないけど」
+:::
+
+::: voice-father
+お父さん「そうだね、次の2つの表は層別する前とする後の結果なんだけど、比べてみてよ」
+:::
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note appearance="simple" title="層別した指標の併合可能性"}
+表1と表2は、がん患者100人のランダム化臨床試験を想定して作った数値例です。表1では100人全体における死亡リスクを、表2はステージIIIの50人とステージIVの50人に層別した死亡リスクを示しています。
+
+まず、抗がん剤投与群の死亡リスクをみてください。ステージIIIでは死亡リスクは20%と低く、ステージIVでは40%と高いことがわかります。そして全体の死亡リスクは、ステージIIIとステージIVの平均（30%）です。このように、リスクには、層別する前の値が、層別した後の平均になるという性質があります。
+
+これを踏まえて、リスク比、リスク差、オッズ比の性質を考えてみましょう。表1と表2を比べると、リスク比はすべて0.50倍です。このように、層別する前後でリスク比が変化しないことは、治療効果を測るために好ましい性質です。なぜなら、ステージIIIでリスクが半分になり、ステージIVでも半分になるなら、2つの層を合計してもリスクが半分になってほしいからです。リスク差は、2つのリスクの差をとったものです。したがって、リスクと同じように層別する前の値が、層別した後の平均になります。層ごとのリスク差が等しければ（この数値例ではそうなっていませんが）、層別前のリスク差も、層別後のリスク差と同じ値になるはずです。リスク差とリスク比の持つこの性質を、**併合可能性（collapsibility）**と呼んでいます。
+
+一方で、オッズ比は層の併合可能性を持たないことが知られています。表1と表2において、オッズ比は0.29倍、0.38倍、0.17倍と変化していますよね。
+:::
+
+::: panel-tabset
+### ステージによる層別前
+
+表1. 仮想的ながんランダム化臨床試験におけるリスク差・リスク比・オッズ比
+
+|               | 緩和療法群 | 抗がん剤投与群 | 効果の指標 |
+|---------------|------------|----------------|------------|
+| 合計（100人） |            |                |            |
+| 　死亡        | 30         | 15             |            |
+| 　生存        | 20         | 35             |            |
+| 　死亡リスク  | 60%        | 30%            |            |
+| 　リスク差    |            |                | -30%       |
+| 　リスク比    |            |                | 0.50倍     |
+| 　オッズ比    |            |                | 0.29倍     |
+
+### ステージによる層別後
+
+表2. 層別後の死亡リスクとリスク差・リスク比・オッズ比
+
+|                     | 緩和療法群 | 抗がん剤投与群 | 効果の指標 |
+|---------------------|------------|----------------|------------|
+| ステージIII（50人） |            |                |            |
+| 　死亡              | 10         | 5              |            |
+| 　生存              | 15         | 20             |            |
+| 　死亡リスク        | 40%        | 20%            |            |
+| 　リスク差          |            |                | -20%       |
+| 　リスク比          |            |                | 0.50倍     |
+| 　オッズ比          |            |                | 0.38倍     |
+| ステージIV（50人）  |            |                |            |
+| 　死亡              | 20         | 10             |            |
+| 　生存              | 5          | 15             |            |
+| 　死亡リスク        | 80%        | 40%            |            |
+| 　リスク差          |            |                | -40%       |
+| 　リスク比          |            |                | 0.50倍     |
+| 　オッズ比          |            |                | 0.17倍     |
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「なるほどね、リスク比を計算すると同じ0.5なのに、オッズ比の値はばらばらなんだ。オッズ比は層別すると同じ効果としては扱いにくいから注意しなさいってことね」
+:::
+
+::: voice-father
+お父さん「そうだね、研究者としては、ステージ別でも層別しなくても、リスクが半分になる治療なら、半分ってことが読み取れる値になってほしいよね。そういう感覚でしょ」
+:::
+
+::: voice-daughter
+私「うん」
+:::
+
+::: voice-father
+お父さん「そこまではいいんだ。でも誤解してほしくないのは、リスク比は併合可能で、オッズ比は併合可能ではない、だからオッズ比が悪いっていいたいわけじゃないよ。結果の読み取り方と相性があるってこと。オッズ比はオッズ比で、ロジスティック回帰と対応しているっていうのは別のメリットがある」
+:::
+
+::: voice-daughter
+私「ふーん。お父さんって数学的性質を整理するときめっちゃ早口」
 :::
 :::::::::::::::::::::::::::::::::
 
-| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   | $\chi^2$ | p値    |
-|------------|--------|--------|----------|---------------|-------|--------|
-| Intercept  | 1      | -27.25 | 3.03     | -33.20～-21.30 | 80.55 | \<0.01 |
-| STOMA      | 1      | 1.41   | 1.54     | -16.1～4.45   | 0.84  | 0.3588 |
-| AGE        | 1      | 1.47   | 1.48     | -1.42～4.36   | 0.99  | 0.3197 |
-| SEX        | 1      | 25.72  | 0.00     | 25.72～25.72  |       |        |
-| INCOME     | 1      | -0.00  | 0.00     | -0.00～0.00   | 0.58  | 0.4481 |
+### リスク差、リスク比、オッズ比、どれを使う？
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「ふむふむ。よくある回帰分析の結果だね。この表、上司にみせるんでしょ。その前にちょっと手直しした方がいいかもね」
-:::
-
 ::: voice-daughter
-私「やっぱり？そんな気がしてみてもらおうと思ったんだ」
+私「ごめん、そもそも論なんだけど。どうせ割合同士を比べるんだから、わざわざ比をとらなくてもいいんじゃない？パーセントの差でよくない？+10%とか-10%とか。リスクの違いはこれでじゅうぶん伝わるでしょ」
 :::
 
 ::: voice-father
-お父さん「まず、Intercept、STOMA、AGE、SEX、INCOMEっていうのがわからないよ。Intercept以外は**共変量（covariates）**のことだよね」
+お父さん「うん、リスク差はもっと使われていいと思う。でも、リスク差にも欠点がある。複数の研究を集めてメタアナリシスをするとき、それぞれの研究から得られたリスク差やリスク比をひとつの値に要約するでしょ」
 :::
 
 ::: voice-daughter
-私「共変量って？」
+私「ああ、みたことある」
 :::
 
 ::: voice-father
-お父さん「共変量っていうのは、ロジスティック回帰に入れる説明変数のこと。復職率を規定する要因っていえばいいかな。それと、Interceptは回帰式でいう切片項のこと。統計ソフトウェアのアウトプットをそのまま表にしたんでしょ？きっとストーマ、年齢、性別、年収という変数を使ったんだと思うんだけど、データ上の変数名がそのままになっている。それに、出てきた数字をぜんぶ載せると、表がうるさくない？」
+お父さん「このとき問題になるのが、コントロール群（プラセボ群や緩和療法群）で観察されたリスクが、研究によって低かったり高かったりすることなんだ。同じ疾患や治療を扱っていても、予後のいい患者ばかり集めた研究もあれば、予後の悪い患者を対象にした研究もあるでしょ」
 :::
 
 ::: voice-daughter
-私「めっちゃしゃべるな。そうね、実はRの`glm()`を使ったんだけど、そこもよくわからなかったんだよね。そこから聞こうかな」
+私「そりゃあるよね」
 :::
 
 ::: voice-father
-お父さん「どのあたり？」
-:::
-
-::: voice-daughter
-私「`glm()`の指定の仕方。引数っていうの？」
+お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、以下のようなことがわかった」
 :::
 :::::::::::::::::::::::::::::::::
 
-```{r eval=FALSE}
-glm(y ~ x1 + x2, family = binomial(), data = dat)
-```
+- リスク差は、研究ごとにリスクが変動すると、その影響にともなうばらつきが大きい
+- リスク比やオッズ比は、研究間を通じて数値が安定していた
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「つまりね、指標によって解釈のしやすさや統計的な特徴が違うっていうこと。リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが、おそらく結論」
+:::
+
 ::: voice-daughter
-私「以前、連続データは正規分布、2値データは2項分布ってイメージが大事みたいなこといってたでしょ？`glm()`もその延長だと思うんだけど、`family`とか`link`とか謎で、ロジスティック回帰になってるか自信ない」
+私「じゃあどうしたらいいのよ」
 :::
 
 ::: voice-father
-お父さん「そこはね、単変量分布を**一般化線型モデル**に広げないと説明できないよ。つまりね、`glm()`はgeneralized linear modelの略なんだけど、ただの確率分布ってわけじゃなくて、3つのパーツから成り立っているんだ。ざっくりいうとこの3つだよ」
-::: 
-
-- 確率分布（データの型はなにか）
-
-- 回帰係数×共変量
-
-- リンク関数（平均をどう変換して共変量と結びつけるか）
-
-::: voice-daughter
-私「で、それが`family`、`y ~ x1 + x2`、`link`なの？」
-::: 
-
-::: voice-father
-お父さん「そう。`glm()`は、確率分布+回帰係数×共変量+リンクを指定してるだけなんだ」
-::: 
-
-::: voice-daughter
-私「`y ~ x1 + x2`は私もわかるよ。調べたい変数をいれるんでしょ」
-::: 
-
-::: voice-father
-お父さん「そうだね。Rの中では、この式がデザイン行列$X$に変換されてる」
-::: 
+お父さん「結局、臨床研究で観察された差って、リスク差やワクチン有効率のようなひとつの数字で要約できないんだと思う。結果を報告するときは、**絶対指標**（リスク差）と**相対指標**（リスク比やハザード比）の両方を示したり、Kaplan-Meier曲線やAalen-Johansen曲線をグラフにするのが正解なんじゃないかな。数字しか出せないなら、いちばんバランスがいいのは、リスク差+リスク比かもね」
+:::
 ::::::::::::::::::::::::::::::::: 
 
-```{r eval=FALSE}
-X <- model.matrix(~ x1 + x2, data = dat)
+::: {.callout-note appearance="simple" title="glm()を用いたリスク差、リスク比、オッズ比の計算"}
+
+リスク差、リスク比、オッズ比はいろいろな手段で計算できますが、汎用性が高いのは一般化線型モデル（`glm`）を用いる方法です。リンク関数を選ぶことで、リスク差（`link="identity"`）、リスク比（`link="log"`）、オッズ比（`link="logit"`）を選択することができ、交絡因子の調整もしやすいのが便利なところです。ただし、リスク比とオッズ比では、回帰係数の指数をとるひと手間が必要です。表1のリスク差、リスク比、オッズ比を再現するコードを示しておきますので、参考まで。
+:::
+
+::: {.callout-note appearance="simple" collapse="true" title="Rコードと結果はこちら"}
+```{r warning=FALSE}
+dat <- data.frame(
+  treat = factor(c("palliative", "palliative", "chemotherapy", "chemotherapy"), levels = c("palliative", "chemotherapy")),
+  death = c(1, 0, 1, 0),
+  n     = c(30, 20, 15, 35)
+)
+dat
+
+fit_identity <- glm(
+  death ~ treat,
+  family  = binomial(link = "identity"),
+  weights = n,
+  data    = dat
+)
+risk_difference <- coef(fit_identity)[["treatchemotherapy"]]
+print(risk_difference)
+
+fit_log <- glm(
+  death ~ treat,
+  family  = binomial(link = "log"),
+  weights = n,
+  data    = dat
+)
+risk_ratio <- exp(coef(fit_log)[["treatchemotherapy"]])
+print(risk_ratio)
+
+fit_logit <- glm(
+  death ~ treat,
+  family  = binomial(link = "logit"),
+  weights = n,
+  data    = dat
+)
+odds_ratio <- exp(coef(fit_logit)[["treatchemotherapy"]])
+print(odds_ratio)
 ```
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列$X$を作っている。$X$の最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列でも数値に置き換えて計算できたり、回帰係数との掛け算が行列として計算できたり、なにかと都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
-::: 
-
-::: voice-daughter
-私「なるほどね、じゃあ`family`ってなに？データの型？」
-::: 
-
-::: voice-father
-お父さん「そう。`family`は日本語では分布族の意味だね。正確には**指数型分布族（exponential family）**。前にいったみたいに、データの型にあわせて確率分布を選ぶ」
-::: 
-::::::::::::::::::::::::::::::::: 
-
-- 連続データ: gaussian()
-- 2値データ: binomial()
-- 計数データ: poisson()
-
-```{r eval=FALSE}
-glm(y ~ x1 + x2, family = gaussian(), data = dat)
-glm(y ~ x1 + x2, family = binomial(), data = dat)
-glm(y ~ x1 + x2, family = poisson(), data = dat)
-```
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「ただしね、一般化線型モデルではデフォルト仕様みたいなものがあって、`family`を指定すると以下の3つが一度に決まるっていう特徴がある」
-::: 
-
-- yの確率分布
-- yの分散
-- その確率分布にあったリンク関数
-
-::: voice-daughter
-私「リンク関数ってなんだ？」
-::: 
-
-::: voice-father
-お父さん「リンク関数（link function）は、**平均をどう変換して回帰係数×共変量にあわせるか**だよ。`family = binomial()`は、デフォルトで**ロジット関数（logit function）**というリンク関数を使っている。ロジット関数が、2項分布の構造にあった"自然な"リンク関数なんだ。これがロジスティック回帰だよ」
-::: 
-
-::: voice-daughter
-私「そっか、よかった。うん、けっこうわかったから今日はもういい」
-::: 
-::::::::::::::::::::::::::::::::: 
-
+:::
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
-ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます。リンク関数をうまく指定してリスク$\pi$を変換することで、オッズ比以外の関連の指標を求められることが知られています。次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
+一般化線型モデルの一種であるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます（田中2022）。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
 
-1.  リスク差
-2.  リスク比
-3.  ハザード比
-4.  1、2、3すべて求めることができる
+1.  ロジスティック回帰を用いてリスク比を計算できる
+2.  ロジスティック回帰を用いてリスク比を計算できない
 :::
 
 ::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
--   **正解は4です**
+-   **正解は1です**
 
-一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。詳しくはのちのエピソードで述べますが、リンク関数は、ロジスティック回帰でいえば、リスク$\pi$を関数$g(\pi)$を用いて変換しています。
-
-リスク差を求めるには、$g(\pi)=\pi$つまり恒等関数を指定します。
-
-リスク比を求めるには、$g(\pi)=\log(\pi)$ つまり対数関数を指定します。
-
-ハザード比を求めるには、$g(\pi)=\log\{-\log⁡(1-\pi)\}$つまり補二重対数（complementary log-log）関数を指定します。
+ロジスティック回帰の共変量に、数値を代入することで、確率を計算することができます。共変量として、2群（たとえば抗がん剤投与群と緩和療法群）を指定すれば、それぞれの群の確率が求まりますよね。その比をとれば、リスク比が計算できます。
 :::
 
 ### 文献
 
+- Furukawa TA, Guyatt GH, Griffith LE. Can we individualize the ‘number needed to treat’? An empirical study of summary effect measures in meta-analysis. Int J Epidemiol 2002; 31: 72-6
+
 - [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
-### このシリーズとRスクリプト
+### 次のエピソードとRスクリプト
 
-- [From Risk to Logistic Regression](logistic-regression-1.html)
-- [Logit: How a Transformation Shapes an Effect](logistic-regression-2.html)
-- [Where My Logistic Regression Went Wrong](logistic-regression-3.html)
-- [Why Logistic Regression Fails in Small Samples](logistic-regression-4.html)
-- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-5.html)
-
+- [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](logistic-regression-1.html)
+- [From Risk to Logistic Regression](logistic-regression-2.html)
+- [Logit: How a Transformation Shapes an Effect](logistic-regression-3.html)
+- [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
+- [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
+- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
 ### 過去のシリーズと用語集
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
-- [Silent Confusions Hidden in Percentages](effects-1.html)
 - [Statistical Terms in Plain Language](glossary.html)
+
