--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -1,322 +1,326 @@
 ---
-title: "Why Logistic Regression Fails in Small Samples"
+title: "Where My Logistic Regression Went Wrong"
+description: ""
+tags:
+  - Confounding & collapsibility
+  - Effect measure, 
+  - Generalized linear model
+  - Language & writing
 format:
   html:
     toc: true
+date: 2025-12-08
 ---
 
-```{=html}
-<style>
-header#title-block-header.quarto-title-block {
-  display: none !important;
-}
-
-body {
-  margin: 0;
-  background: #ffffff;
-  color: #2b1f1a;
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 1.55;
-}
-
-h1, h2, h3 {
-  font-family: "Georgia", "Times New Roman", serif;
-  color: #3a2a22;
-  font-weight: 600;
-}
-
-h3 {
-  margin-top: 2.4rem;
-}
-
-a {
-  color: #8b4a24;
-  text-decoration: none;
-}
-a:hover {
-  color: #6f3718;
-  text-decoration: underline;
-}
-
-.navbar {
-  background: #ffffff !important;
-  border-bottom: 1px solid #e6e0da;
-  margin-bottom: 0 !important;
-}
-.navbar .navbar-brand,
-.navbar .navbar-nav > li > a {
-  color: #3a2a22 !important;
-  border-bottom: 2px solid transparent;
-  padding-bottom: 2px;
-}
-.navbar .navbar-nav > li > a:hover {
-  border-bottom-color: #8b4a24;
-}
-
-.hero-text {
-  padding: 1.5rem 0;
-  color: #3a2a22;
-}
-
-.project-card {
-  border: 1px solid #e6e0da;
-  padding: 1.3rem 1.5rem;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-  background: #ffffff;
-  border-radius: 6px;
-  margin-bottom: 1.5rem;
-}
-
-.about-section {
-  border: 1px solid #e6e0da;
-  padding: 1.5rem;
-  border-radius: 0;
-  background: #ffffff;
-  margin-top: 2.5rem;
-}
-
-.about-section::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.author-photo {
-  float: left;
-  margin-right: 1rem;
-  border-radius: 50%;
-}
-
-.btn-link {
-  display: inline-block;
-  border: 1px solid #8b4a24;
-  color: #8b4a24;
-  padding: 0.4rem 0.9rem;
-  font-size: 0.9rem;
-  border-radius: 3px;
-}
-.btn-link:hover {
-  background: #8b4a24;
-  color: #ffffff;
-}
-
-.content-narrow {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 1.8rem 1.2rem 2.5rem;
-}
-
-.hero-header {
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
-}
-
-.hero-header-img {
-  width: 100vw;
-  height: min(400px, 45vh);
-  object-fit: cover;
-  object-position: 50% 40%;
-  display: block;
-}
-
-.dialogue p {
-  line-height: 1.7;
-}
-.dialogue .voice-father p {
-  color: #7a3e1a !important;
-}
-.dialogue .voice-daughter p {
-  color: #234f7c !important;
-}
-.dialogue .voice-daughter,
-.dialogue .voice-father {
-  margin-bottom: 0.4rem;
-}
-
-.text-right {
-  text-align: right;
-}
-.serif-block p {
-  font-family: "Georgia", "Times New Roman", serif;
-  font-size: 0.9em;  line-height: 1.6;
-}
-</style>
-```
-
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Adjusting for Bias IV − Why Logistic Regression Fails in Small Samples
+# Adjusting for Bias IV − Where My Logistic Regression Went Wrong
 
 ::: {.serif-block .text-right}
-Keywords: bias, effect measure, generalized linear model
+Keywords: confounding & collapsibility, effect measure, generalized linear model, language & writing
 :::
+
 
 ------------------------------------------------------------------------
 
-### なぜロジスティック回帰の計算ができなかったのか
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「お父さん、コーヒー飲んで寛いでいるところわるいんだけど、時間あるかな。ロジスティック回帰についてなんだけど。説明してくれたのはありがたいんだけどね、群作用とか完全分離とか、途中でわかんなくなっちゃってさ。気になって、先に進めないわけよ」
-:::
-
-::: voice-father
-お父さん「そうだったのか。Rコードを見せてもらったけど、解析自体は間違ってなさそうだよ」
-::: 
-
-::: voice-daughter
-私「いや、私自身の問題だよね。納得感というか自信というか。だからさ、完全分離について説明してくれない？この前の解析で、なにが起きたのか知りたいんだよね。あの解が出なかったていう結果しかないと、なんだかね」
-::: 
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note appearance="simple" title="ロジスティック回帰の推定"}
-
-**尤度関数による推定**
-
-以前、ロジスティック回帰の$\pi_i$は2項分布の確率に対応しているといいました。2項分布の確率関数にはデータと$\pi_i$が含まれていますが、この式にデータを代入すると、$\pi_i$の式が得られます。さらに、$\pi_i$は$\beta_0,\beta_1,...,\beta_{p-1}$の関数です。したがって、確率関数の式は、$L(\beta_0,\beta_1,...,\beta_{p-1})$というように、$\beta_0,\beta_1,...,\beta_{p-1}$の関数とみなすことができます。この関数を尤度関数といいます。
-
-ロジスティック回帰の回帰係数は、この尤度関数を最大化する値として計算されます。ただし、データから必ずしも解が求まるわけではありません。計算が収束しなかったり、不安定になったりする理由は、主に2通り考えられます。
-
-**完全分離**
-
-一つ目は、完全分離（complete separation）や擬似完全分離（quasi-complete separation）です。完全分離とは、
-
-$\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\beta_{p-1}X_{i,p-1}$
-
-を計算したとき、その値によって、アウトカムを100%の精度で0または1に判別できてしまう状況のことをいいます。擬似完全分離は、100%ではないものの、共変量からアウトカムがほぼ判別できてしまう状況です。別の言葉でいえば、共変量の情報に比べて、データに含まれる情報が不足していて、実質的にランダム性がないということを意味します。つまり、完全分離や擬似完全分離は、サンプルサイズに比べ、共変量の数が多すぎるときによく生じる問題です。
-
-**多重共線性**
-
-二つ目は、多重共線性（multicollinearity）です。これは、共変量同士の相関が強すぎることを意味します。仮に、年収が年齢に完全に比例する状況（つまり相関が1）を考えてみてください。このとき、ロジスティック回帰を用いて年収と年齢の影響を分離することはできません。これが多重共線性の一例です。言い換えると、相関の高い共変量は、推定が不安定になるため、同時にロジスティック回帰に含めない方がよい場合が多いです。
-:::
+### どうしてオッズ比が無限大になっちゃったの？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「つまり、完全分離が生じるデータは、若い人は全員復職、高齢者は全員非復職っていう調査結果みたいなもの。年齢だけで復職できるかどうか100%当てられてしまう。まさにこれが完全分離で、尤度関数から解が求まらない状況だよ」
-::: 
-
-::: voice-daughter
-私「あれ？回帰分析って最小2乗法を使うんじゃないの？尤度関数？」
-::: 
-
-::: voice-father
-お父さん「大学の教科書ではそう教わるけどね。最小2乗法を使うのは連続データのときだけかな。別の推定方法もいろいろある」
-::: 
-
-::: voice-daughter
-私「ふーん。新しい方法がいろいろありそうってのは知ってるよ。AIとか機械学習とか」
-::: 
-
-::: voice-father
-お父さん「まあね。はやりだよね」
-::: 
-
-::: voice-daughter
-私「統計学と機械学習ってどう違うの？同じ？」
-::: 
-
-::: voice-father
-お父さん「お隣さんって感じかな。データを解析するって意味では同じことをしているわけだし、機械学習の教科書でも、ロジスティック回帰とかロジスティック判別とかは扱うもの。統計学で習うROC曲線なんかは、機械学習の範疇な気がするし。重なる部分は多いよ。まあ、機械学習の方がたくさんのパラメータを推定する傾向にあるとはいえるかな。ロジスティック回帰よりニューラルネットワークの方が、モデルも複雑だし、パラメータの数も多い。さっき共変量の数を減らそうっていったでしょ。機械学習では、ああいうパラメータの数を減らすって発想はしない」
-::: 
-
-::: voice-daughter
-私「パラメータの数が少ないのが統計学の特徴ってわけ？」
-::: 
-
-::: voice-father
-お父さん「うーん、でもそれは程度問題かもしれない。一番の違いはなんだろうね。統計学は確率モデルが必ず基礎にあるってことかな。そして、標本から母集団を調べるっていう考え方をする。手法でいうと、p値とか信頼区間とか、ああいうやつね」
-::: 
-
-### 統計手法を選ぶ理由
-
-::: voice-daughter
-私「はやりだから使っていいのかな。ほら、ニューラルネットワークとかこの前の群作用とか、知らなくてもみんな使ってるよね。問題ないのかな」
-::: 
-
-::: voice-father
-お父さん「でもね、2項分布とロジット関数のところまでは理解できなかった？」
-::: 
-
-::: voice-daughter
-私「そこまではできた」
-::: 
-
-::: voice-father
-お父さん「なら合格点だと思う。数理的な手法って奥が深いでしょ。だから、仮に数学的な真実があったとして、究極的には部分的な理解しかできないかもしれない。専門家とユーザーで程度は違うけどね。だから、みんな使ってるっていうのは、使ってもいい理由のひとつにはなる。医療でも、添付文書で有効性が確立していないって書かれた薬が、第一選択だったりするでしょ」
-::: 
-
-::: voice-daughter
-私「ああ、コミュニティスタンダードのことね。そういうこともあるのが現実だけど、すっきりはしてないよね、医師はみんな。それにさ、コミュニティスタンダードの薬は、単にみんな使っているから選んでるんじゃないよ。難病で他に候補がなかったり、エビデンスが足りなくても経験上は効果があるから、その薬を使って治療してるの」
+お父さん「あのさ、昨日のロジスティック回帰の表の続きをしない？コーヒー淹れたから」
 :::
 
-::: voice-father
-お父さん「それって、医療上の目的に対してじゅうぶん役に立ってるってことでしょ。ロジスティック回帰も同じじゃない？用途に見合った性能があるって自信を持っていえれば、ところどころ理解が追い付かなくても、使用していいと思う。そう、まさに完璧に解明された技術なんてないのが現実だからね。世の中ではいろんな技術が使われてる。でも、すべて3つの理由で正当化されるんだよ」
-:::
-
-- 数学と自然科学が支えている
-- コミュニティが支えている
-- 使用する目的が支えている
-
-::: voice-father
-お父さん「それぞれが100%じゃなくても、この3つが支えあえれば使う意味があるんだ」
-::: 
-
 ::: voice-daughter
-私「そういうもんかな。納得したような、まだ霧が残っているような気もする。まあいいや、疲れてきたし。性別のオッズ比が無限大になった理由はわかったよ。尤度関数にデータを代入したら、回帰係数の解が変になるような式になったってわけね」
-::: 
+私「えーお手やらわかに。コーヒーもありがとう。この表の話だよね」
+:::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note appearance="simple" title="データの型と統計手法"}
+| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   |$\chi^2$| p値   |
+|------------|--------|--------|----------|---------------|-------|--------|
+| Intercept  | 1      | -27.25 | 3.03     | -33.20～-21.30| 80.55 | \<0.01 |
+| STOMA      | 1      | 1.41   | 1.54     | -16.1～4.45   | 0.84  | 0.3588 |
+| AGE        | 1      | 1.47   | 1.48     | -1.42～4.36   | 0.99  | 0.3197 |
+| SEX        | 1      | 25.72  | 0.00     | 25.72～25.72  |       |        |
+| INCOME     | 1      | -0.00  | 0.00     | -0.00～0.00   | 0.58  | 0.4481 |
 
-アウトカムはデータの型によって4種類に分類されます。
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「そう、これね、間違いではないんだけど、まだよくできる。表を作成するときには、情報が自然に入ってくるように、読者の立場で考えなくちゃ。具体的な注意点はこんなところかな」
+:::
+:::::::::::::::::::::::::::::::::
 
-- 連続データ （例：血圧やQOL）
-- 分類データ （例：有害事象の有無）
-- 計数データ （例：有害事象の発生件数）
-- 生存時間データ （例：全生存期間）
+-   読者の立場で考える
+-   表のフォーマットに従う
+-   単位・表示桁数に気を配る
+-   表タイトル・脚注を利用して補足情報を伝える
+-   数え尽くしの原則を守る
 
-さらに、分類データはいくつかの種類があり、カテゴリが2通りのものを2値データ、カテゴリに順序があるものを順序データと呼んでいます。生存時間データの一種には、競合リスクを考慮した競合リスクデータがあります。データの型によって、正規分布や2項分布など確率分布が異なりますよね。そのため、それぞれ異なる統計手法が用いられます。詳しくは表をみてください。
-
-仮に、ストーマ造設あり・なしと復職状況の関係を調べたいとすると、2つの変数をモデルに当てはめることになるため、回帰モデルを用いて調べたいとします。このときアウトカムを復職の有無（2値データ）とするなら、ロジスティック回帰を選ぶべきです。もし復職までの期間（生存時間データ）とするなら、Cox回帰の方が適切です。
-
-**個人内で反復測定があるか**
-
-同一個人にくり返し臨床検査やアンケートを行うと、似たような検査結果になりますよね。たとえば、朝と晩に血圧を測ると、2つの測定値に相関が生じます。治療前と治療後に、QOL質問票に回答してもらう場合も、その測定値は独立ではありません。このように1人の患者に複数回の測定値があるデータを**反復測定データ**といいます。反復測定データでは、個人内の測定値は独立ではありません。したがって、独立性を仮定している統計手法（たとえば対応のないt検定や$\chi^2$検定）は不適切です。反復測定データの解析では、**変量効果モデル（random-effects model）**や**一般化推定方程式（generalized estimating equation）**と呼ばれるやや高度な手法が用いられます。この場合の変量効果は、「ひとりひとりの個人の効果」を表しています。これらの方法は、個人内でデータが独立ではないこと（データの相関）を考慮するものです。
-
-**交絡の調整が必要かどうか**
-
-**交絡因子（confounder）**とは、治療とアウトカムとの関係を歪める第三の因子のことです。仮に、ストーマ造設あり・なしと復職状況の関係に、年齢が強くかかわっているとしましょう。そして、ストーマ保有者と非保有者で、平均年齢が異なっているとします。このような場合、2群間の年齢の違いを無視するとバイアスが生じます。これを補正するために、ロジスティック回帰がよく用いられます。 ランダム化臨床試験では、比較する群間で実験条件が揃っているため、交絡の調整は不要です。一方、観察研究（コホート研究やケース・コントロール研究）では交絡の調整は必須です。今回題材にした復職率の調査も観察研究の一種ですから、統計解析ではロジスティック回帰やCox回帰が主に用いられるでしょう。最近では交絡を調整して、正しく因果関係を調べるために、因果推論の手法（プロペンシティスコアなど）を用いることが増えてきました（田中2022）。
-
-| データの型 | 反復測定 | 交絡調整 | 統計手法 | 備考 |
-|---------------|---------------|---------------|---------------|---------------|
-| 連続データ | なし | なし | 対応のない*t*検定、Wilcoxon順位和検定 | 平均の比較 |
-|  | 個人内で2回測定 | なし | 対応のある*t*検定、Wilcoxon符号付順位検定 | 対応のあるデータ |
-|  | なし | なし | 正規線型モデル | 回帰モデルの一種 |
-|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
-| 2値データ | なし | なし | $\chi^2$検定 | 割合の比較 |
-|  | 個人内で2回測定 | あり | McNemar検定 | 対応のあるデータ |
-|  | なし | あり | ロジスティック回帰 | 回帰モデルの一種 |
-|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
-| 計数データ | なし | なし | $\chi^2$検定 | 発生率の比較 |
-|  | なし | あり | Poisson回帰 | 回帰モデルの一種 |
-|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
-| 生存時間データ | なし | なし | Kaplan-Meier曲線 | 生存曲線の記述 |
-|  | なし | あり | Cox回帰 | 回帰モデルの一種 |
-| 競合リスクデータ | なし | なし | Aalen-Johansen曲線 | 累積発生率曲線の記述 |
-|  | なし | あり | Fine-Grayモデル | 回帰モデルの一種 |
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「ロジスティック回帰からいろんな指標が出せるけど、表にはオッズ比、95%信頼区間、p値だけあれば普通はじゅうぶんだよ」
 :::
 
-### このシリーズとRスクリプト
+::: voice-daughter
+私「それはこの表にも載ってるよね」
+:::
 
-- [From Risk to Logistic Regression](logistic-regression-1.html)
-- [Logit: How a Transformation Shapes an Effect](logistic-regression-2.html)
-- [Where My Logistic Regression Went Wrong](logistic-regression-3.html)
-- [Why Logistic Regression Fails in Small Samples](logistic-regression-4.html)
-- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-5.html)
+::: voice-father
+お父さん「載っていません。この表の”推定値”は、みたところ回帰係数の値でしょ。それを換算してオッズ比のスケールに直さないといけない。換算するには、回帰係数$\beta$の指数をとって、$OR=\exp(\beta)$を求めればいい」
+:::
 
+::: voice-daughter
+私「そうなのか。ストーマのオッズ比は$\exp(1.41)=4.1$ってことね。あれ？$\exp(25.72)$を計算してみると、パソコンに表示できないくらいに大きい数字になったんだけど。ほとんど無限大に近い数字だ。性別の影響が強いのかな。年収は$\exp(-0.00)$？なんか変だな」
+:::
+
+::: voice-father
+お父さん「これはよくあるトラブルだよ」
+:::
+
+::: voice-daughter
+私「そうなの？」
+:::
+
+::: voice-father
+お父さん「復職しなかった患者さんはほとんど女性だったんじゃない？**擬似完全分離（quasi-complete separation）**っていうデータの配置上の問題が起きちゃってて、性別の回帰係数を、うまく推定できていないんだ。この先は少し長くなりそうだから、ちょっとたばこ吸わせてもらうね」
+:::
+:::::::::::::::::::::::::::::::::
+
+
+::: {.callout-note appearance="simple" title="完全分離"}
+
+ロジスティック回帰の回帰係数は、最尤法（maximum likelihood）という汎用的な推定方法によって計算されます。これはある種の方程式を解くことに対応していますが、データから必ずしも解が求まるわけではありません。これが完全分離（complete separation）や擬似完全分離（quasi-complete separation）という問題です。これらの問題が起きると、回帰係数が求まらなかったり、不安定だったりするため、共変量の数の削減や、最尤法以外の推定方法の利用など、なんらかの根本的な対処が必要になります。
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「（灰皿にたばこを押しつけながら）正しい計算ができていないわけだから、ロジスティック回帰の結果を示すのはやめた方がいい。性別だけじゃなくて年収も問題だね。単位が円のまま扱うと、桁が大きすぎて数字が読めない。単位を万円にして、年収が1万円増えたら復職率がどう変化するかを示すといいんじゃないかな。性別と年収の扱いは気になると思うけど、今はこれくらいにしよう。表の体裁を直してあげるよ」
+:::
+
+::::::::::::::::::::::::::::::::: 
+
+|              | オッズ比 | 95%信頼区間 | p値  |
+|--------------|----------|-------------|------|
+| ストーマなし | （基準） |             |      |
+| ストーマあり | 4.13     | 0.20～85.23 | 0.36 |
+| 65歳未満     | （基準） |             |      |
+| 65歳以上     | 4.35     | 0.24～78.60 | 0.32 |
+| 女性         | （基準） |             |      |
+| 男性         | ∞        | ∞～∞        |      |
+| 年収（万円） | 1.00     | 0.98～1.01  | 0.45 |
+
+\*手術後1年以内の復職をアウトカムとした多変量ロジスティック回帰
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「あれ？オッズ比4.13倍ってことは、復職率がだいたい4倍になったってこと？そんなことある？」
+:::
+
+::: voice-father
+お父さん「違う違う。あのね、オッズ比はオッズの比をとったもの。オッズっていうのは、復職率を$\pi$で表すと、それを$\pi/(1-\pi)$と変換したものなんだ。$\pi$が0に近いときは、オッズ比は$\pi$の比に近い値になるんだけど、比の分子と分母の取り方で、向きが変わることに注意しないといけない。今回は、モデルの定義上、ストーマありの方が"復職できない"オッズが約4倍という意味だよ。ただし、2値アウトカムを"復職できない"に取ると、向きは逆になる」
+:::
+
+::: voice-daughter
+私「わかりにくいのう」
+:::
+
+::: voice-father
+お父さん「じゃあ、どこに気を付けて手直ししたか説明するね。ロジスティック回帰では、共変量はなにで、どう扱ったかを正確に伝えることが大切なんだ。データをみると、年齢は65歳未満か以上かで分類した2値データみたいだね。そういうときは、何歳で分類したか、どの分類を基準にしたかわからないと、結果を読み取れない。また、連続データでは、忘れがちだけど単位が必要。年収の単位を円から万円にして、表に追記しておいたよ」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple" title="注意事項1. フォーマット"}
+
+論文で示される表には、決められたフォーマットがあります。表は、行（row）と列（column）から構成され、行と列は概念的には対称ですが、視覚的には役割が異なります。英語圏では、表は左から右に、行ごとに読むことが慣習になっています。そのため、このサイトに示されている表のように、縦線で区切ることはしません。
+
+数字の意味をわかりやすく伝えるためには、どこにどのような情報を配置するかに気を配るべきです。さきほどの表では、列が指標の種類を表すというシンプルな方針を採用しています。そのため、数字がオッズ比、95%信頼区間、p値に対応することが一目でわかります。また、必要な情報から順に読み取れるように、各行または各列の順序にも気を配りたいところです。
+
+ある程度大きな表であれば、情報はグループにわけられることが普通です。表のフォーマットも、グループが視覚的にわかりやすいように工夫できます。たとえば後に出てくる表1では、行と列でそれぞれグループ化がなされています。行をグループ化するときには字下げ（indent）を用います。性別の内訳を示すために字下げがなされていますよね。また、列をグループ化するときにはスパナ（spanner）を用います。“ストーマ保有者”、“ストーマ非保有者”といった列の見出しを、スパナヘッド（spanner head）といいます。
+
+:::
+
+::: {.callout-note appearance="simple" title="注意事項2. 単位・表示桁数"}
+
+表では測定単位（unit）を明らかにすることが重要です。臨床検査値を扱う論文を投稿するときは、その雑誌の編集方針をみて、どのような単位系を採用しているか確認しましょう。
+
+数字の表示桁数は、ある程度桁数やルールが統一されていなければ、印象を悪くします。統計ソフトウェアが出力する数字は桁数が大きいことがありますが、そのまま表に示す必要はありません。有効数字2桁または3桁か、もともとの測定値より桁数を1桁大きく示すのが基本です。
+
+日本工業規格（Z 9041-1:1999）によると、平均の有効数字は、測定値より1～2桁大きく、標準偏差の有効数字は、最大でも3桁程度といわれています。つまり、むやみに数字の表示桁数を増やしても精確性が増すわけではないのです。年齢を例に挙げると、測定単位は「歳」なので、小数点1桁まで示すとよいでしょう。表1の年齢の平均・標準偏差では、そのようになっています。p値については、小数点以下2桁か3桁まで報告すれば、有意水準（0.05が多い）との大小関係が読み取ることができるので、必要十分でしょう。
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「表の作り方をご助言いただけるのはありがたいんだけどさ、肝心のロジスティック回帰はどうすればいいんだろ」
+:::
+
+::: voice-father
+お父さん「擬似完全分離を避けるには、共変量の数を削るのがわかりやすい。今回はサンプルサイズが不足しているみたいだから、他の共変量はすべて使わないで、単にストーマ造設と復職率だけの関連を調べたらどうかな？1パラメータあたり5〜10イベント程度は欲しいといわれるからね。その場合も、通常の$\chi^2$検定は使わない方がいいよ。**Fisherの正確検定**と**Clopper-Pearson信頼区間**っていう方法が推奨されている」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  title="2値データの解析においてサンプルサイズが不足したときの指針"}
+
+-   ロジスティック回帰の共変量の数を減らす（目安としてパラメータの数のおよそ5倍のイベント数が必要）
+-   $\chi^2$検定ではなくFisher正確検定を用いる
+-   2項分布に基づく信頼区間（Clopper-Pearson信頼区間）を用いる（田中2022）
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+
+### 足りなかったたくさんの情報
+
+::: voice-daughter
+私「でも、ロジスティック回帰で交絡因子を調整しなさいっていったのはお父さんなんだよ」
+:::
+
+::: voice-father
+お父さん「そうだね、それは重要な問題だよね。じゃあ、ストーマ保有者と非保有者で、年齢、性別、年収の分布がどれくらい違うかをまず確認しようか。前にも話したとおり、年収を尋ねたことでバイアスが生じていないかとか、年収を尋ねて欠測が多いんじゃないかとか、いろいろ気になるし。もし分布が揃ってたら、調整しなくても影響は小さいかもしれない」
+:::
+
+::: voice-daughter
+私「あ、その表なら資料にあるよ」
+:::
+
+::: voice-father
+お父さん「じゃあ、あとはストーマ造設と復職率の関連を表にするだけだね。資料には、以下の表1と表2を載せればいいよ」
+:::
+
+:::::::::::::::::::::::::::::::::
+
+表1. 20XX～20YY年にZZ病院で手術を受け、がんサバイバー復職率調査に回答した直腸がん患者80人の背景因子の記述
+
+|              | ストーマ保有者（N=20） | ストーマ非保有者（N=60） |
+|--------------|------------------------|--------------------------|
+| 年齢（歳）   | 57.0 (8.6)             | 65.5 (10.4)              |
+| 65歳以上     | 10.0%                  | 51.7%                    |
+| 性別         |                        |                          |
+| 　男性       | 35.0%                  | 53.3%                    |
+| 　女性       | 60.0%                  | 46.7%                    |
+| 　不明       | 5.0%                   | 0.0%                     |
+| 年収（万円） | 508 (77)               | 514 (101)                |
+
+\*平均（SD）または%
+
+表2. 直腸がん患者のうちストーマ保有者20人と非保有者60人の復職率の比較
+
+|              | N   | 1年以内に復職せず | 復職率 | 95%信頼区間\* | p値† |
+|--------------|-----|-------------------|--------|---------------|------|
+| ストーマあり | 20  | 1                 | 95.0%  | 75.1～99.9%   |      |
+| ストーマなし | 60  | 2                 | 96.7%  | 88.5～99.6%   | 1.00 |
+
+\*Clopper-Pearson法
+
+†Fisher正確検定
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「集団のアウトカムを比較したいときは、その前に表1のようにそれぞれの集団の背景因子を記述するべきだよ。ストーマ保有者は20人しかいなくて、非保有者に比べて、平均年齢が低くて、女性が多いわけだ。やっぱり最終的にはロジスティック回帰で、背景因子の違いを調整しないといけないかもね。現時点での調査の回答率はどうだった？」
+:::
+
+::: voice-daughter
+私「調査票は100人に送って、80人から回収できたから、回答率は80%かな」
+:::
+
+::: voice-father
+お父さん「項目ごとの無回答（item non-response）についてはどう？」
+:::
+
+::: voice-daughter
+私「そっか、調査票を回収できたかと、項目ごとの回答があったかは別だもんね。年齢は全員回答してくれたよ。性別は1人記入していなかった。項目ごとの回答数まで、表に示した方がよかった？」
+:::
+
+::: voice-father
+お父さん「ううん、論文ではそこまで細かい数字は示さないことが多い。重要な変数が欠測してたりするなら別だけどね。たとえばさ、ロジスティック回帰を行うとき、性別不明はどう扱ったの？」
+:::
+
+::: voice-daughter
+私「統計ソフトウェアのマニュアル調べたら、欠測は自動的に除外されるんだって」
+:::
+
+::: voice-father
+お父さん「そうすると解析対象の人数が80人じゃなくて79人に減るんだから、表を作るときにそこを説明しておかないといけないんじゃない？一般に、ロジスティック回帰の結果を示す表だけだと、どんなデータかわかりにくいっていう問題がある。復職できなかったのは3人しかいないって、表2をみるまで気づかなかったよ？まだ1施設からのデータしか集まってないからでしょ。それじゃあロジスティック回帰はしたくてもできないよね」
+:::
+
+::: voice-daughter
+私「確かにね。そのあたりの状況を、読者に伝えなきゃって気持ちが足りなかったみたい」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  title="注意事項3. 表タイトル・脚注"}
+
+読者が表を読むときのことを想像してみてください。最初に目にするのは、表に示された結果自体ではなく、表タイトルの情報です。簡潔な表タイトルをよく目にしますが、これはもったいないことです。表1、表2の表タイトルには、調査が行われた状況、対象疾患、人数、統計解析の目的などが含まれています。表タイトルを決めるときは、可能な限り多くの情報を伝えるように工夫しましょう。
+
+表には様々な数字が示されますから、どういった指標かわかりにくいときがしばしばあります。もしかしたら、複雑な統計手法から計算されたものかもしれません。データを解析するために用いた統計手法は、方法のセクションで説明することが基本ですが、読者への配慮として、表の脚注（footnote）を利用することもあります。表1でいえば、括弧内の数字の意味は自明ではないので、“平均（SD）または%”と脚注がついていますよね。表2の脚注には、どの統計手法を用いて信頼区間とp値を計算したかが説明されています。このように読者にとってなじみのない指標や表現には、補足説明が必要です。
+
+脚注を参照するための記号には、a、b、cまたは\*、†、‡、§、¶を用いるのが正式です。
+
+:::
+
+::: {.callout-note appearance="simple"  title="注意事項4. 数え尽くしの原則"}
+
+統計解析の経験があるものなら誰でも、様々な理由で対象者が除外されるため、個々の解析で、人数が必ずしも同じにならないことを知っているものです。透明性を高めるために、統計解析ごとに、何人が対象となったか報告するべきです。
+
+統計家の間では、**数え尽くしの原則（principle of exhaustion）**という言葉があります。分類変数の分類が複雑だったり、欠測データがあったりするときには、分類ひとつひとつの人数を合計し、それが全体の人数に合うかどうかを確認せよ、というのがこの原則の教えです。最初に作成した表では人数が示されておらず、どのようなデータが解析されたのかわかりません。一方、表1・表2では、何人が解析対象で、何人が復職したのかが記述されています。さらに、数え尽くすと全体80人や100%に一致することから、正しく集計されたことが読み取れます。
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ちなみにお父さん、もし”臨床疑問と研究仮説”で例を挙げてくれたときの研究仮説3みたいに、研究の目的が復職率と関連する因子の探索だとしたら、何か変わることはある？」
+:::
+
+::: voice-father
+お父さん「どんな特徴を持った患者が、復職が難しいのか、予測因子をみつけたいってことかな。予測因子の候補となるデータがあるなら、それをロジスティック回帰の共変量に入れることで、予測因子の探索を行うことができるよね」
+::: 
+
+::: voice-daughter
+私「うんうん」
+:::
+
+::: voice-father
+お父さん「こういった探索的検討では、特定の因子に関心がないってことが第一の違いだよ。ストーマと復職率の関連を調べるときは、ストーマのオッズ比やp値を求めることがゴールでしょ。予測因子の探索では、予測因子の候補をできるだけたくさん集めて、どの因子をモデルに入れたら予測精度が高いか、逆にどの因子は要らないかを調べることがゴールになる。これを変数選択っていうんだ」
+::: 
+
+::: voice-daughter
+私「ゴールは違ってもさ、p値を使えばよくない？有意な因子をモデルに入れたらいいんでしょ」
+:::
+
+::: voice-father
+お父さん「そういうやり方もあるけどね。予測2乗誤差、ROC曲線、AICといった予測精度専用の指標を使うことも多い。大事なのはね。**予測因子の候補や変数選択の基準を、研究計画書などに書いておくこと**。事前に決めておかないと、どうしても研究者の主観が入っているんじゃないかって批判されるからね」
+:::
+:::::::::::::::::::::::::::::::::
+
+
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+ロジスティック回帰の起源として正しいのは、次の時代のうちどれでしょうか。
+
+1.  1900年以前
+2.  1900～30年
+3.  1931～60年
+4.  1961年以降
+:::
+
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
+-   **正解は1です**
+
+少なくとも、ベルギーの数学者Queteletが1838年に出版した書籍に、ロジット関数の式が示されています。ロジスティックという単語は、同じくベルギーの数学者Verhulstが1845年にProceeding of Belgian Royal Academyで、初めて用いられたとされています。
+:::
+
+### 文献
+
+- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
+
+### 次のエピソードとRスクリプト
+
+- [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](logistic-regression-1.html)
+- [From Risk to Logistic Regression](logistic-regression-2.html)
+- [Logit: How a Transformation Shapes an Effect](logistic-regression-3.html)
+- [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
+- [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
+- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
 ### 過去のシリーズと用語集
